--- a/ok/gk/gk07-0.1.0.0.0.md
+++ b/ok/gk/gk07-0.1.0.0.0.md
@@ -2,4 +2,4 @@
 
 凡暴力引起损伤，导致机体气血、经络、脏腑功能紊乱者，统称内伤。但伤科之内伤必有外力损伤病史，与内科所说的七情劳倦、饮食内伤是不同的。
 
-祖国医学对内伤方面的论述甚多，如《杂病源流犀烛·跌仆闪挫源流》指出：“跌仆闪挫，卒然身受，由外及内，气血俱伤病也”。“必气为之震；震则激，激则壅，壅则气之周流一身者，忽因所壅，而凝聚一处，是气失其所以为气矣。气运乎血，血本随气以周流，气凝则血亦凝矣。气凝在何处，则血亦凝在何处矣。夫至气滞血瘀，则作肿作痛，诸变百出，虽受跌仆闪挫者，为一身之皮肉筋骨，而气既滞，血既瘀，其损伤之患，必由外侵内，而经络脏腑并与俱伤，其为病，有不可胜言，无从逆料者矣”。中医有“筋伤内动于肝”，“骨伤内动于肾”之说，“其言内而不言外者，明乎伤在外，而病必及内，及治之之法，亦必于经络脏腑间求之，而为之行气，为之行血，不得徒从外涂抹之已也……。”因此，对损伤必须按整体观念阐明其内外关系，然后进行辨证施治。
+祖国医学对内伤方面的论述甚多，如《杂病源流犀烛·跌打扑内挫源流》指出：“跌仆内挫，卒然身受，由外及内，气血俱伤病也”。“必气为之震；震则激，激则壅，壅则气之周流一身者，忽因所壅，而凝聚一处，是气失其所以为气矣。气运平血，血本随气以周流，气凝则血亦凝矣。气凝在何处，则血亦凝在何处矣。夫至气滞血瘀，则作肿作痛，诸变百出，虽受跌受内挫者，为一身之皮肉筋骨，而气既滞，血既瘀，其损伤之患，必由外侵内，而经络脏腑并与俱伤，其为症有不可胜言，无从逆料者矣”。中医有“筋伤内动于肝”，“骨伤内动于肾”之说，“其言内而不言外者，明乎伤在外，而症必及内，及治之之法，亦必于经络脏腑间求之，而为之行气，为之行血，不得徒从外涂抹之已也……。”因此，对损伤必须按整体观念阐明其内外关系，然后进行辨证施治。
