--- a/ok/gk/gk05-0.3.3.0.0.md
+++ b/ok/gk/gk05-0.3.3.0.0.md
@@ -2,7 +2,7 @@
 
 股骨头、颈又称髀杵俗称胯骨轴。股骨骨折是老年人常见的损伤，女性多于男性。老年人的骨质疏松，不小心滑、跌倒，极易引起骨折，预后亦较差。
 
-股骨颈与股骨干轴线形成一个颈干角，正常范围为110〜140°，平均为127°，儿童可达150°，大于正常为外翻，小于正常为内翻。股骨颈与股骨干不在同一平面，股骨头稍向前倾斜与股骨干的额状面成一个痛度称之为前倾角，幼年时该角较大，随着年龄的增大逐渐减小，至成人约是12～15%。
+股骨颈与股骨干轴线形成一个颈干角，正常范围为110〜140°，平均为127°，儿童可达150°，大于正常为外翻，小于正常为内翻。股骨颈与股骨干不在同一平面，股骨头稍向前倾斜与股骨干的额状面成一个痛度称之为前倾角，幼年时该角较大，随着年龄的增大逐渐减小，至成人约是12～15°。
 
 关节囊起于髋血内缘，大部分止于股骨颈的基底部，其前上方有髂股韧带加强，后上方、内方有坐股韧带加强，仅有后外下方小部份暴露于关节囊之外，所以股骨颈骨折，大多属囊内骨折，少数属囊外骨折。
 
