--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -86,7 +86,7 @@
 >
 > 据《灵枢•卫气行》记载，平旦阴尽，**卫气先从目内眦睛明穴出阳，上行至头部，然后循手足三阳经向下运行，最终由足阳明达足心，入足少阴经，循少阴之别蹻脉，上行复交会于目内眦足太阳睛明穴，**卫气白天循此路线运行二十五周。
 >
-> 卫气夜行于阴，**由足少阴肾经传注于肾脏，由肾脏注入心脏，由心脏注入肺脏，由肺脏注入肝脏，由肝脏注入脾脏，由脾脏再传至肾脏为一周**，卫气夜间以此次序运行二十五周。...
+> 卫气夜行于阴，**由足少阴肾经传注于==肾脏==，由肾脏注入==心脏==，由心脏注入==肺脏==，由肺脏注入==肝脏==，由肝脏注入==脾脏==，由脾脏再传至==肾脏==为一周**，卫气夜间以此次序运行二十五周。...
 >
 > 就卫气的运行而言，卫气慓疾滑利，白天循手足三阳经，分布于四肢、皮肤、肌肉之间。
 >
@@ -106,6 +106,14 @@
 > 歧伯曰：此外伤于风，内开腠理，毛蒸理泄，卫气走之，固不得循其道。此气慓悍滑疾，见开而出，故不得从其道，故命曰漏泄。
 >
 > ——《灵枢•营卫生会第十八》
+>
+> 
+
+**==筆記==：** 感覺和最近的身體狀況相似
+
+
+
+
 
 ##### 功能
 
@@ -217,6 +225,12 @@
 
 `市面上流传的经络图往往只有十二正经和奇经八脉。这让初学者误认为没有这些线路的地方就没有经络。其实经络图中标明的只是经络的主干道，主干道上还会生出很多细小的络脉。这些络脉太复杂，所有没有在图上标出。大家仔细学习《概论-经络》、《针灸学-经络》就知道，除了这些主干道，经络还包括十五络脉、十二经别、十二经筋、十二皮部等等，是完全覆盖全身上下、内外的。`
 
+
+
+
+
+
+
 ### 2、人体地气
 
 #### 2.1、概述
@@ -228,6 +242,8 @@
 从物质角度看：人的血、津液中含有空气中传入的氧等物质，此为天气化为地气。人体的营卫等气态物质是饮食而入的固液态物质转化而成，此为地气化为天气。
 
 从能量角度看，就像太阳照耀大地，形成东南中西北的五行能量差异一样，人体的形质也是按照能量差异进行五行划分。
+
+
 
 #### 2.2、脏腑五行
 
@@ -247,7 +263,7 @@
 
 内经上讲“腑受脏之浊气”，从此处看，五脏运转产生的废物应是通过腑排出体外。有中医治疗脏器重病的思路是将病邪导入肠胃，再排出体外，此观点可供大家参考。
 
-另外，经方中医在治疗疾病的时候，会将三阴病转变为三阳病，然后再将病邪从三阳排除体外。这里三阴指的就是五脏加心包以及各自的经络区域，三阳指的就是六腑以及各自经络区域。
+另外，经方中医在治疗疾病的时候，会将三阴病转变为三阳病，然后再将病邪从三阳排出体外。这里三阴指的就是五脏加心包以及各自的经络区域，三阳指的就是六腑以及各自经络区域。
 
 > 夫胃、大肠、小肠、三焦、膀胱，此五者天气之所生也，其气象天，故泻而不藏。此**受五藏浊气，名曰传化之府**，此不能久留，输泻者也。
 >
@@ -265,7 +281,7 @@
 >
 > ——《素问•气交变大论》
 >
-> 意谓五运之气保持相对平衡，自然界的生物才会有正常的生长发育，所以这是万物生长化收藏过程的自然道理,也是四时正常气候变生规律的体现。否则，平衡失常，天地四时之气就会发生闭塞。
+> 意谓五运之气保持相对平衡，自然界的生物才会有正常的生长发育，所以这是万物生长化收藏过程的自然道理，也是四时正常气候变生规律的体现。否则，平衡失常，天地四时之气就会发生闭塞。
 >
 > “天地”，指代表天气和地气的五运六气。**六气属阳，周于天外，代表天气，五运属阴，守于地内，代表地气**。
 >
@@ -331,6 +347,8 @@
 | 金   | 辛   | 白   | 商   | 燥   | 秋   | 西   |
 | 水   | 咸   | 黑   | 羽   | 寒   | 冬   | 北   |
 
+
+
 ##### 其它五行相关内容
 
 | 五行 | 五化 | 五脉     |
@@ -340,6 +358,8 @@
 | 土   | 化   | 代       |
 | 金   | 收   | 毛（浮） |
 | 水   | 藏   | 石（沉） |
+
+
 
 ### 3、总结
 
