--- a/ok/gk/gk07-0.1.2.0.0.md
+++ b/ok/gk/gk07-0.1.2.0.0.md
@@ -8,7 +8,7 @@
 
 1.瘀血：伤后血脉不得循经流注，不得宣通，滞留局限于部分体内而形成瘀血停滞，或谓局限性血肿形成，疼痛和压痛部位固定，此多属伤血症的轻型。
 
-2.亡血：伤后较大的血脉破裂，血速而猛溢脉外或溢于体内脏腑经络之间，或及血自诸窍而溢由于体外，而为伤血症重型。临床上可表现为吐血、便血、衄血、尿血，甚至因出血性休克而危及生命。
+2.亡血：伤后较大的血脉破裂，血速而猛溢脉外或溢于体内脏腑经络之间，或及血自诸窍而溢出于体外，而为伤血症重型。临床上可表现为吐血、便血、衄血、尿血，甚至因出血性休克而危及生命。
 
 3.气血两伤：唐容川《血证论》说：“气为血之帅，血随之而运行，血为气之守，气得而静谧，气结则血凝，气虚则血脱，气迫则血走”。气与血是相互依存的，当机体遭受损伤时，亦难将两者绝然分开。内伤症多肿痛并作，出现气血两伤证候，且两种证候的出现亦有先后；一般伤气之先，伤血在后，故为气伤及血证，反之则为血伤气症，治疗当亦应有所偏重为宜。
 
