--- a/ok/gk/gk05-0.3.4.0.0.md
+++ b/ok/gk/gk05-0.3.4.0.0.md
@@ -4,7 +4,7 @@
 
 〔病因病机〕
 
-老年人均有不同程度的骨质疏松，若过度外展、内旋、内翻或跌例撞击大粗隆部，可发生骨折。按损伤的原理，一般可分为三型：
+老年人均有不同程度的骨质疏松，若过度外展、内旋、内翻或跌倒撞击大粗隆部，可发生骨折。按损伤的原理，一般可分为三型：
 
 1.外旋型骨折：骨折线自小粗隆或小粗隆的稍上、下部位，斜行向外上方与股骨干纵轴相交成较小的锐角，小粗隆可单独撕脱或连同其上下的部分骨皮质一起骨折，成为外旋型股骨粗隆部骨折的一部份，因肌肉收缩和重力的影响使远端后上及外旋移位，但颈干角变化不大（图5—63）。也有少数患者因肢体的内收而发生髋内翻畸形。这种骨折（除严重粉碎者外）一般手法整复、牵引、外展夹板固定后，骨折即不再移位。这是最多见的一种稳定性的骨折。
 
