update ok/wk/wk12-0.16.0.0.0.md. 1、水痘：在冬、春季流行，原文为“多在冬、春季流行”，已修改！ 2、一日两决，原文是一日两次，已修改！ 3、**按**，已修改成原文“按”

--- a/ok/wk/wk12-0.16.0.0.0.md
+++ b/ok/wk/wk12-0.16.0.0.0.md
@@ -12,7 +12,7 @@
 
 一是抓主证，明确诊断。本病初起为红斑或水疱，由米粒大至黄豆大不等，迅速变为脓疱，损害数目逐渐增多，周周有轻度红晕，脓疱丰满紧张，数日后疱壁弛缓，容易破裂，露出潮红糜烂面，流出黄水，干燥后结成米黄色或灰黄色厚痂，逐渐痂皮脱落而愈，愈后不留疤痕。本病多发颜面、四肢等露出部位，自觉瘙痒，重者伴有发热，口渴，心烦，大便秘结，小便黄赤，舌红苔黄，脉数。病程长短不一，少数可延及数月。常并发疖肿，严重者可并发肾脏疾病，二是以脓疱的多少、糜烂面色泽的鲜、污，以及病程的长短辨其虚实。三是应与水痘、脓窝疮进行鉴别诊断。
 
-水痘：在冬、春季流行，全身症状明显，皮疹以大小不等发亮的水疱为主，可同时见到红斑、疱疹、结痂等各种不同的皮损。
+水痘：多在冬、春季流行，全身症状明显，皮疹以大小不等发亮的水疱为主，可同时见到红斑、疱疹、结痂等各种不同的皮损。
 
 脓窝疮：常因虱病、疥疮、湿疥、虫咬皮炎等继发感染而成，脓疱壁较厚，破后凹陷成窝，结成厚痂。
 
