--- a/ok/gk/gk05-0.3.5.0.0.md
+++ b/ok/gk/gk05-0.3.5.0.0.md
@@ -44,7 +44,7 @@
 
 <img src="img\5-69.jpg" style="zoom:70%;" />
 
-（4）悬浮牵引法：适用于成年人。牵引时病人可以自由活动不影响牵力。方法是；将患肢放在妥马氏架上，膝关节屈曲，小腿放在Pearson氏连接架上，妥马氏圈足端和连接架以及胫骨的牵引针均通过滑车系统，系以重量，伤肢和支架一起浮动，并保持牵引力的作用。重量约为体重的1/8〜1/7，7〜10天内复位符合要求后，调整重量为维持量，切忌过度牵引。8周后改皮牵引。
+（4）悬浮牵引法：适用于成年人。牵引时病人可以自由活动不影响牵力。方法是：将患肢放在妥马氏架上，膝关节屈曲，小腿放在Pearson氏连接架上，妥马氏圈足端和连接架以及胫骨的牵引针均通过滑车系统，系以重量，伤肢和支架一起浮动，并保持牵引力的作用。重量约为体重的1/8〜1/7，7〜10天内复位符合要求后，调整重量为维持量，切忌过度牵引。8周后改皮牵引。
 
 （5）90°—90°—90°牵引法：适用于已感染的开放性骨折，既方便换药和引流，又有利于腘绳肌放松，有利于控制和对合两断端。方法是：在小腿上打石膏管，然后在股骨踝上位或胫骨胫骨结节处作骨牵引，向上作垂直牵引，保持髋、膝、踝关节90°位。牵引的重量约1/8～1/7体重。
 
