--- a/ok/rm/rm03-0.6.0.0.0.md
+++ b/ok/rm/rm03-0.6.0.0.0.md
@@ -8,7 +8,7 @@
 >
 > ——《黄帝内经•灵枢•本神》
 
-> “肾者，主水，**受五脏六腑之精而藏之**，故五脏盛，乃能泻。”
+> 肾者，主水，**受五脏六腑之精而藏之**，故五脏盛，乃能泻。
 >
 > ——《素问•上古天真论》
 
@@ -34,7 +34,7 @@
 
 这种由饮食经过脾胃提炼得到的精成为后天之精。
 
-> 王三尊《医权初编》说:“凡饮食先入于胃，俟脾胃运化，其精微上输于肺，肺气传布各所当入之脏，浊气下入大小肠，是**脾胃为分金炉**也。若脾胃有病，或虚或实，一切饮食药饵，皆不运化，安望精微输肺而布各脏耶？是知治病当以脾胃为先。若脾胃他脏兼而有病，舍脾胃而治他脏，无益也。又一切虚症，不问在气在血，在何脏腑，而只专补脾胃，脾胃一强，则饮食自倍，精血日旺，阳生而阴亦长矣。”
+> 王三尊《医权初编》说：“凡饮食先入于胃，俟脾胃运化，其精微上输于肺，肺气传布各所当入之脏，浊气下入大小肠，是**脾胃为分金炉**也。若脾胃有病，或虚或实，一切饮食药饵，皆不运化，安望精微输肺而布各脏耶？是知治病当以脾胃为先。若脾胃他脏兼而有病，舍脾胃而治他脏，无益也。又一切虚症，不问在气在血，在何脏腑，而只专补脾胃，脾胃一强，则饮食自倍，精血日旺，阳生而阴亦长矣。”
 >
 > 《黄帝内经讲解-五脏六腑皆禀气于胃》
 
@@ -56,13 +56,13 @@
 
 32岁以后是因为消化吸收能力下降而不能吸收大量食物精微。
 
-![](img/houtian.svg)
+<img src="img/houtian.svg" style="zoom: 25%;" />
 
 #### 2.2、先天之精
 
 ##### 2.2.1、来源
 
-与生俱来,父母给予
+与生俱来，父母给予
 
 ##### 2.2.2、作用
 
@@ -76,7 +76,7 @@
 
 普通人先天之精只能消耗，极难补充。
 
-![](img/xiantian.svg)
+<img src="img/xiantian.svg" style="zoom:25%;" />
 
 
 
@@ -130,7 +130,7 @@
 
 `牙齿是观察髓的充盈状态的一个指标，因为齿为骨之余，而骨由髓来营养。所以，牙齿洁白坚固代表骨质好、髓充盈。如果牙齿黄黑、松动，在排除牙龈炎、吸烟等问题后，可以代表髓的不足。`
 
-`肾精的几大作用中，应特别注意生殖功能与生髓功能的关系。在肾精产生的量有限的前提下，如果有人长期纵欲，过度使用精的生殖功能，则会造成肾精数量减少，生髓能力下降。导致骨髓、脑髓的不足，使人的健康水平快速下降。这应该是《素问•上古天真论》中提到的“以欲竭其精，以耗散其真，不知持满...故半百而衰也”的道理。`
+`肾精的几大作用中，应特别注意生殖功能与生髓功能的关系。在肾精产生的量有限的前提下，如果有人长期纵欲，过度使用精的生殖功能，则会造成肾精数量减少，生髓能力下降。导致骨髓、脑髓的不足，使人的健康水平快速下降。这应该是《素问•上古天真论》中提到的“以欲竭其精，以耗散其真，不知持满……故半百而衰也”的道理。`
 
 > 冬时肾水当令，阳气内敛，肾气闭藏，故五脏真气亦**下藏于肾，化精生髓，充养骨骼**。
 >
@@ -142,17 +142,17 @@
 
 > “脑户，督脉穴，在枕骨上，通于脑中，**脑为髓海**，乃元阳精气之所聚，针入脑则真气泄，故立死”。
 >
-> 《灵枢·海论》说：“*髓海*不足，则脑转耳鸣，胫酸眩冒，目无所见，懈怠安卧”
+> 《灵枢●海论》说：“*髓海*不足，则脑转耳鸣，胫酸眩冒，目无所见，懈怠安卧”。
 >
-> 《灵枢·口问》也说：“上气不足，脑为之不满，耳为之苦鸣，头为之苦倾，目为之眩”
+> 《灵枢●口问》也说：“上气不足，脑为之不满，耳为之苦鸣，头为之苦倾，目为之眩”。
 >
-> “脑之为言在也，人精在脑
+> 脑之为言在也，人精在脑。
 >
 > 《中医药学概论-奇恒之腑-脑》
 
-> 肢体筋脉弛缓，痿弱无力，失于自行活动及行走为主证。。	
+> 肢体筋脉弛缓，痿弱无力，失于自行活动及行走为主证。
 >
-> 久病体虚，或房劳过度，损伤肝肾致精血亏虚，精亏不能**滋髓养骨**，血虚不能荣筋养脉而致痿软无力。...肾主身之骨髓。...肾气热则腰脊不举，**骨枯而髓减发为骨痿**。
+> 久病体虚，或房劳过度，损伤肝肾致精血亏虚，精亏不能**滋髓养骨**，血虚不能荣筋养脉而致痿软无力。……肾主身之骨髓。……肾气热则腰脊不举，**骨枯而髓减发为骨痿**。
 >
 > 《中医内科学-痿证》
 
@@ -182,11 +182,7 @@
 
 八八、则齿髮去。
 
-
-
-![](img/shenjing.svg)
-
-
+<img src="img/shenjing.svg" style="zoom:25%;" />
 
 
 
@@ -204,11 +200,9 @@
 
 3、以人中沟深而长为好
 
-
-
 > **岐伯曰：使道隧以长，基墙高以方，通凋营卫，三部三里起，骨高肉满，百岁乃得终。**
 >
-> ——《灵枢•天年》....
+> ——《灵枢•天年》
 >
 > “三部三里”，指面部的上中下三部，分别以额角、鼻头、下颌为标志。“起”，有高起不平陷之意。....
 >
@@ -220,7 +214,7 @@
 
 下图表示了肾精的出入情况
 
-![](img/%E8%82%BE%E8%97%8F%E7%B2%BE%E5%9B%BE.jpg)
+<img src="img/%E8%82%BE%E8%97%8F%E7%B2%BE%E5%9B%BE.jpg" style="zoom: 50%;" />
 
 
 
@@ -255,17 +249,15 @@
 >
 > 中医学认为：精气之间是可以而且能够相互转化的，故有“精可化气”、“气可生精”的说法，其中，肾精与肾气之间亦可相互转化，故中医古籍中，“肾气”与“肾精”常可互称。
 >
-> 肾中所藏之精包括“先天之精”和“后天之精”。其“先天之精”禀受于父母，与生俱来，是构成人体的原始物质。即《灵枢·决气》所说：“两神相搏，合而成形，常先身生，是谓精”。“后天之精”，来源于脾胃运化的水谷之精微，此精微转输五脏六腑，化为脏腑之精气，此精气除维持各脏腑功能活动外，所余部分，藏之于肾。故《素问·上古天真论》说：“肾……受五脏六腑之精而藏之”......
->
 > 肾中所藏之精包括“先天之精”和“后天之精”。
 >
-> 其“先天之精”禀受于父母，与生俱来，是构成人体的原始物质。即《灵枢·决气》所说：“两神相搏，合而成形，常先身生，是谓精”。
+> 其“先天之精”禀受于父母，与生俱来，是构成人体的原始物质。即《灵枢•决气》所说：“两神相搏，合而成形，常先身生，是谓精”。
 >
-> “后天之精”，来源于脾胃运化的水谷之精微，此精微转输五脏六腑，化为脏腑之精气，**此精气除维持各脏腑功能活动外，所余部分，藏之于肾**。故《素问·上古天真论》说：**“肾……受五脏六腑之精而藏之**”...
+> “后天之精”，来源于脾胃运化的水谷之精微，此精微转输五脏六腑，化为脏腑之精气，**此精气除维持各脏腑功能活动外，所余部分，藏之于肾**。故《素问•上古天真论》说：**“肾……受五脏六腑之精而藏之**”。
 >
-> 肾中所藏的“先天”、“后天”之精，二者密切相关。其“先天之精”的补充，有赖于”后天之精”的不断供养；“后天之精”的化生，又依赖于“先天之精”的资助。二者相互依存，相互补充，共同组成肾中之精，以促进人体的生长、发育，进而产生“生殖之精”，以繁衍后代。...
+> 肾中所藏的“先天”、“后天”之精，二者密切相关。其“先天之精”的补充，有赖于”后天之精”的不断供养；“后天之精”的化生，又依赖于“先天之精”的资助。二者相互依存，相互补充，共同组成肾中之精，以促进人体的生长、发育，进而产生“生殖之精”，以繁衍后代。
 >
-> 肾中所藏之精，为人生命之源，对人体的生长发育与生殖，起着极为重要的作用。《素问·上古天真论》说：“女子七岁，肾气盛，齿更髮长；二七而天癸至，任脉通，太冲脉盛，月事以时下，故有子；三七，肾气平均，故真牙生而长极；四七，筋骨坚，髮长极，身体盛壮；五七，阳明脉衰，面始焦，髮始堕；六七，三阳脉衰于上，面皆焦，髮始白；七七，任脉虚，太冲脉衰少，天癸竭，地道不通，故形坏而无子也。丈夫八岁，肾气实，髮长齿更，二八，肾气盛，天癸至，精气溢泻，阴阳和，故能有子；三八，肾气平均，筋骨劲强，故真牙生而长极；四八，筋骨隆盛，肌肉满壮；五八，肾气衰，髮堕齿槁；六八，阳气衰竭于上，面焦，髮鬓颁白；七八，肝气衰，筋不能动，天癸竭，精少，肾脏衰，形体皆极；八八、则齿髮去”。此段论述，指出了人体的生、长、壮、老、已的自然规律，与肾中精气的盛衰密切相关。
+> 肾中所藏之精，为人生命之源，对人体的生长发育与生殖，起着极为重要的作用。《素问•上古天真论》说：“女子七岁，肾气盛，齿更髮长；二七而天癸至，任脉通，太冲脉盛，月事以时下，故有子；三七，肾气平均，故真牙生而长极；四七，筋骨坚，髮长极，身体盛壮；五七，阳明脉衰，面始焦，髮始堕；六七，三阳脉衰于上，面皆焦，髮始白；七七，任脉虚，太冲脉衰少，天癸竭，地道不通，故形坏而无子也。丈夫八岁，肾气实，髮长齿更，二八，肾气盛，天癸至，精气溢泻，阴阳和，故能有子；三八，肾气平均，筋骨劲强，故真牙生而长极；四八，筋骨隆盛，肌肉满壮；五八，肾气衰，髮堕齿槁；六八，阳气衰竭于上，面焦，髮鬓颁白；七八，肝气衰，筋不能动，天癸竭，精少，肾脏衰，形体皆极；八八、则齿髮去”。此段论述，指出了人体的生、长、壮、老、已的自然规律，与肾中精气的盛衰密切相关。
 >
 > 人自幼年开始，肾精逐渐充盛，出现齿更髮长的勃物生机。
 >
@@ -277,25 +269,17 @@
 >
 > 《中医药学概论-藏象-肾、膀胱》
 
-
-
-> 《素问•五藏别论》说：“所谓五脏者，藏精气而不泻也，故满而不能实……这段话是说：五脏的主要功能是藏精气……。
+> 《素问•五藏别论》说：“所谓五脏者，藏精气而不泻也，故满而不能实……这段话是说：五脏的主要功能是藏精气。
 >
 > 《中医药学概论-五脏六腑》
-
-
 
 > ***夫精者，身之本也。故藏于精者，春不病温。***
 >
 > ——《素问•金匮真言论》
 
-
-
 > *然上文既云气归精，是气生精也；而此又曰精化气，是精生气也。二者似乎相反，而不知此正精气互根之妙也。*
 >
 > 《黄帝内经讲解-味、形、气、精的阴阳互用关系》
-
-
 
 > **两神相搏，合而成形，常先身生，是谓精**……
 >
@@ -305,13 +289,11 @@
 >
 > 《黄帝内经讲解-气血精神-精、气、津、液、血、脉的生成和功用》
 
-
-
 > 马莳注：“面之三里，即三部也，皆已耸起。”《内经》认为，从面部的特征可以判断人的寿夭。骨为肾所主，肾为先天之本；肉为脾所主，脾为后天之本。如果**人中沟深而长，面部肌肉高厚，轮廓方正，面部上、中、下三部耸起而不平陷**，肌肉丰满，骨骼高起者，则提示**先后天精气皆旺盛**，所以人能长寿，活百岁而终其天年。当然，通过望面部特征，测候先后天精气盛衰的方法，判断寿夭有一定的道理，但是不能将面部特征与寿夭的关系绝对化，应结合全身其他方面情况综合考虑。
 >
 > 《黄帝内经讲解-藏象学说-寿夭与先后天的关系》
 
-## 题目
+### 题目
 
-1. 精为人体之宝，既能化阳也能化阴。精足的话，无论身体出现阴虚或者阳虚，精都可以进行补充，则调节能力强，不容易生病，万一生病也容易痊愈。精存在于脏腑之中，以五脏所藏最多。五脏之中，尤其以 __ __ 脏为大仓库，是藏精之所。
-2. 人衰老的根源是肾精的减少。因为肾之华在发，所以头发的状态可以作为肾精的一个指标。又因为肾有主骨生髓的功能，而齿为骨之余，所以牙齿的状态也可以作为肾精的一个指标。头发润泽、牙齿坚固是肾精充足的表现。《素问•上古天真论》谈到人不同年龄，随着肾精的减少，有不同的衰老表现。比如男子在五八四十岁左右的时候，会出现肾气衰，髮堕 __ __ 槁的现象。
+1. 精为人体之宝，既能化阳也能化阴。精足的话，无论身体出现阴虚或者阳虚，精都可以进行补充，则调节能力强，不容易生病，万一生病也容易痊愈。精存在于脏腑之中，以五脏所藏最多。五脏之中，尤其以 __ 脏为大仓库，是藏精之所。
+2. 人衰老的根源是肾精的减少。因为肾之华在发，所以头发的状态可以作为肾精的一个指标。又因为肾有主骨生髓的功能，而齿为骨之余，所以牙齿的状态也可以作为肾精的一个指标。头发润泽、牙齿坚固是肾精充足的表现。《素问•上古天真论》谈到人不同年龄，随着肾精的减少，有不同的衰老表现。比如男子在五八四十岁左右的时候，会出现肾气衰，髮堕 __ 槁的现象。
