--- a/ok/bc/bc02-0.3.5.0.0.md
+++ b/ok/bc/bc02-0.3.5.0.0.md
@@ -1,8 +1,8 @@
 ### 巴豆
 
-〔原文〕**辛热有大毒。生猛而熟少缓。可升可降，能止能行，开窍宣滞，去脏腑沉寒，最为斩关夺门之将。破痰癖血瘕**⑴**，气痞食积，生冷硬物所伤，大腹水肿，泻痢惊痫，口㖞**(2)**耳聋，牙痛喉痹**(3)。缠喉急痹，缓治则死。用解毒丸：雄黄一两，郁金一钱，巴豆十四粒去皮油，为丸。每服五分，津咽下。雄黄破结气，郁金散恶血，巴豆下稠涎。然系厉剂，不可轻用。或用纸捻蘸巴豆油燃火刺喉，或捣巴豆绵裹，随左右纳鼻中，吐出恶涎紫血即宽。鼻虽小、生疮无碍。**其毒性又能解毒杀虫，疗疮疡蛇蝎诸毒。峻用大可劫病，微用亦可和中，通经烂胎。**巴豆禀火烈之气，烂人肌肉。试以少许擦皮肤，即发一泡，况肠胃耶，不可轻用。王好古曰：去心皮膜油生用，为急治水穀道路之剂。炒去烟令紫黑用，为缓治消坚磨积之剂。可以通肠，可以止泻，世所不知也，时珍曰：—妇年六十余，溏泻五载，犯生冷、油腻肉食即作痛，服升涩药，泻反甚，脉沉而滑，此乃脾胃久伤，积冷凝滞，法当以热下之。用蜡匮巴豆丸五十粒，服二日，不利而愈。自是每用治泻痢，愈者近百人。**一名刚子。**雷𢽾曰：紧小色黄者为巴，三棱色黑者为豆，小而两头尖者为刚子。刚子杀人。时珍曰：此说殊乖，盖紧小者为雌，有棱及两头尖者是雄，雄者更峻耳。用之得宜，皆有功力。不去膜则伤胃，不去心则作呕，藏器法连自膜服。**或用壳、用仁、用油，生用、炒用、醋煮烧存性用。研去油，名巴豆霜。芫花为使，畏大黄、黄连、涼水。**中其毒者，以此解之，或黑豆、绿豆汁亦佳。**得火良。**
+〔原文〕**辛热有大毒。生猛而熟少缓。可升可降，能止能行，开窍宣滞，去脏腑沉寒，最为斩关夺门之将。破痰癖血瘕**⑴**，气痞食积，生冷硬物所伤，大腹水肿，泻痢惊痫，口㖞**(2)**耳聋，牙痛喉痹。**(3)<small>缠喉急痹，缓治则死。用解毒丸：雄黄一两，郁金一钱，巴豆十四粒去皮油，为丸。每服五分，津咽下。雄黄破结气，郁金散恶血，巴豆下稠涎。然系厉剂，不可轻用。或用纸捻蘸巴豆油燃火刺喉，或捣巴豆绵裹，随左右纳鼻中，吐出恶涎紫血即宽。鼻虽小、生疮无碍。</small>**其毒性又能解毒杀虫，疗疮疡蛇蝎诸毒。峻用大可劫病，微用亦可和中，通经烂胎。**<small>巴豆禀火烈之气，烂人肌肉。试以少许擦皮肤，即发一泡，况肠胃耶，不可轻用。王好古曰：去心皮膜油生用，为急治水穀道路之剂。炒去烟令紫黑用，为缓治消坚磨积之剂。可以通肠，可以止泻，世所不知也，时珍曰：一妇年六十余，溏泻五载，犯生冷、油腻肉食即作痛，服升涩药，泻反甚，脉沉而滑，此乃脾胃久伤，积冷凝滞，法当以热下之。用蜡匮巴豆丸五十粒，服二日，不利而愈。自是每用治泻痢，愈者近百人。</small>**一名刚子。**<small>雷𢽾曰：紧小色黄者为巴，三棱色黑者为豆，小而两头尖者为刚子。刚子杀人。时珍曰：此说殊乖，盖紧小者为雌，有棱及两头尖者是雄，雄者更峻耳。用之得宜，皆有功力。不去膜则伤胃，不去心则作呕，藏器法连自膜服。</small>**或用壳、用仁、用油，生用、炒用、醋煮烧存性用。研去油，名巴豆霜。芫花为使，畏大黄、黄连、涼水。**<small>中其毒者，以此解之，或黑豆、绿豆汁亦佳。</small>**得火良。**
 
-**巴豆油，作纸捻燃火，吹息，或薰鼻或刺喉，能行恶涎恶血，治中风中恶(4)，痰厥(5)气厥(6)，喉痹不通，一切急病，**大黄、巴豆，同为峻下之剂，但大黄性寒，腑病多热者宜之；巴豆性热，脏病多寒者宜之。故仲景治伤寒传里多热者，多用大黄，东垣治五积属脏者，多用巴豆。与大黄同服，反不泻人。
+**巴豆油，作纸捻燃火，吹息，或薰鼻或刺喉，能行恶涎恶血，治中风中恶(4)，痰厥(5)气厥(6)，喉痹不通，一切急病，**<small>大黄、巴豆，同为峻下之剂，但大黄性寒，腑病多热者宜之；巴豆性热，脏病多寒者宜之。故仲景治伤寒传里多热者，多用大黄，东垣治五积属脏者，多用巴豆。与大黄同服，反不泻人。</small>
 
 【讲解】 (1)血瘕：属于妇女癥瘕一类疾病，少腹有积气或包块疼痛。(2)口㖞：指口角歪斜的证状。(3)喉痹：病名。为咽喉肿痛病证的统称。痹，闭塞不通之意。是咽喉局部气血瘀滞痹阻的病理变化。凡咽喉肿痛诸病，感到阻塞。不利，吞咽不顺，甚至吞咽难下的，均属喉痹范围。(4)中恶：病名。古人指中邪恶不正之气及怪异鬼祟而病者。(5)痰厥：厥证之一。指因痰盛气闭而引起的昏厥。(6)气厥：指因气机逆乱而引起的昏厥。
 
