--- a/ok/bc/bc02-0.3.5.0.0.md
+++ b/ok/bc/bc02-0.3.5.0.0.md
@@ -6,7 +6,7 @@
 
 【讲解】 (1)血瘕：属于妇女癥瘕一类疾病，少腹有积气或包块疼痛。(2)口㖞：指口角歪斜的证状。(3)喉痹：病名。为咽喉肿痛病证的统称。痹，闭塞不通之意。是咽喉局部气血瘀滞痹阻的病理变化。凡咽喉肿痛诸病，感到阻塞。不利，吞咽不顺，甚至吞咽难下的，均属喉痹范围。(4)中恶：病名。古人指中邪恶不正之气及怪异鬼祟而病者。(5)痰厥：厥证之一。指因痰盛气闭而引起的昏厥。(6)气厥：指因气机逆乱而引起的昏厥。
 
-**巴豆辛热大毒，为热性峻泻药，善泻下冷积，逐水退肿，祛痰利咽。**为大戟科乔木植物巴豆的成熟种子。别名江子、刚子。用仁或制霜用。巴豆仁，是将巴豆用粘稠米汤或面汤浸拌，置日光下曝晒或烘裂，去皮，取净仁，炒至焦黑用；巴豆霜，是取净巴豆仁碾碎，用多层吸油纸包裹加热微烘，压榨去油后’碾细，过筛。
+**巴豆辛热大毒，为热性峻泻药，善泻下冷积，逐水退肿，祛痰利咽。**为大戟科乔木植物巴豆的成熟种子。别名江子、刚子。用仁或制霜用。巴豆仁，是将巴豆用粘稠米汤或面汤浸拌，置日光下曝晒或烘裂，去皮，取净仁，炒至焦黑用；巴豆霜，是取净巴豆仁碾碎，用多层吸油纸包裹加热微烘，压榨去油后碾细，过筛。
 
 本品味辛、性热，有大毒。入胃、大肠、肺经。味辛可散结聚之邪；性热可祛寒凝之积，能荡涤肠胃沉寒痼冷、宿食积滞，为热性峻泻药。推荡脏腑，开通闭塞，故前人喻其有“斩关夺门之功”。适用于寒积腹痛，大便秘结，而病情急剧，气血未衰者。取巴豆之强烈泻下作用，以消腹水，用于大腹水肿者。巴豆祛痰作用甚强，能祛除痰涎，以利呼吸，用于喉痹，痰涎壅塞气道，呼吸急促，甚至窒息欲死者。此外，巴豆局部外用，可促使痈肿溃破及蚀疮，治痈肿脓成未溃及疥癣恶疮等证。
 
