--- a/ok/bc/bc02-0.3.5.0.0.md
+++ b/ok/bc/bc02-0.3.5.0.0.md
@@ -20,4 +20,4 @@
 
 此外，以巴豆霜与神曲、胆南星、朱砂同用，即万应保赤散，治小儿乳食停积，痰多惊悸，胃呆腹痛，大便酸臭等证。
 
-【用量用法】大多制成巴豆霜用，以减低毒性。内服0.10.3克，不入煎剂，多配入丸、散剂用。巴豆毒性较大，泻下峻猛，故体虚者及孕妇均当忌用。畏牵牛。
+【用量用法】大多制成巴豆霜用，以减低毒性。内服0.1—0.3克，不入煎剂，多配入丸、散剂用。巴豆毒性较大，泻下峻猛，故体虚者及孕妇均当忌用。畏牵牛。
