--- a/ok/rm/rm03-0.5.0.0.0.md
+++ b/ok/rm/rm03-0.5.0.0.0.md
@@ -86,7 +86,7 @@
 >
 > 据《灵枢•卫气行》记载，平旦阴尽，**卫气先从目内眦睛明穴出阳，上行至头部，然后循手足三阳经向下运行，最终由足阳明达足心，入足少阴经，循少阴之别蹻脉，上行复交会于目内眦足太阳睛明穴，**卫气白天循此路线运行二十五周。
 >
-> 卫气夜行于阴，**由足少阴肾经传注于==肾脏==，由肾脏注入==心脏==，由心脏注入==肺脏==，由肺脏注入==肝脏==，由肝脏注入==脾脏==，由脾脏再传至==肾脏==为一周**，卫气夜间以此次序运行二十五周。...
+> 卫气夜行于阴，**由足少阴肾经传注于{==肾脏==}，由肾脏注入==心脏==，由心脏注入==肺脏==，由肺脏注入==肝脏==，由肝脏注入==脾脏==，由脾脏再传至==肾脏==为一周**，卫气夜间以此次序运行二十五周。...
 >
 > 就卫气的运行而言，卫气慓疾滑利，白天循手足三阳经，分布于四肢、皮肤、肌肉之间。
 >
