--- a/ok/gk/gk03-0.1.1.0.0.md
+++ b/ok/gk/gk03-0.1.1.0.0.md
@@ -8,7 +8,7 @@
 
 （二）疼痛辨证
 
-1.岔气痛：气血流行全身，循环反复，濡养全身。《素问•五藏生成篇》说：“足受血而能步，掌受血而能握，指受血而能摄”。因闪挫或负重用力过度，可致气机岔道而行，窜于经络之外，发生疼痛，但不出现肿胀，其疼痛呼吸、喷嚏则疼更甚，多为窜性疼痛，常见发病部位有胸部、腰部及髓部。
+1.岔气痛：气血流行全身，循环反复，濡养全身。《素问•五藏生成篇》说：“足受血而能步，掌受血而能握，指受血而能摄”。因闪挫或负重用力过度，可致气机岔道而行，窜于经络之外，发生疼痛，但不出现肿胀，其疼痛呼吸、喷嚏则疼更甚，多为窜性疼痛，常见发病部位有胸部、腰部及髋部。
 
 2.气滞痛：起因多不明显，常与肝气不舒有关，气滞不通而疼痛。其疼痛局部不肿，皮色不变，压痛呈弥漫性，时轻时重，痛点可移动。发病部位常见于四肢关节处或两胁部。
 
