update ok/gl/gl02-0.1.1.3.0.md. 其主要生理功能为脾主运化、统摄血液，主升清气改为其主要生理功能为脾主运化、升清、统摄血液更好一点或 主升清，把气删去

--- a/ok/gl/gl02-0.1.1.3.0.md
+++ b/ok/gl/gl02-0.1.1.3.0.md
@@ -2,7 +2,7 @@
 
 1.脾
 
-脾居膈下，位于中焦，为阴中之至阴，于五行属土，主于长夏。其主要生理功能为脾主运化、统摄血液，主升清气。其经脉为足太阴脾经，属脾络胃，与胃互为表里。
+脾居膈下，位于中焦，为阴中之至阴，于五行属土，主于长夏。其主要生理功能为脾主运化、升清、统摄血液。其经脉为足太阴脾经，属脾络胃，与胃互为表里。
 
 由于脾胃总司人身水谷的受纳、腐熟与运化，故《素问》称之为“仓廪之官”。又因人身气血的化生，均有赖于脾胃所生之水谷精微，故又称脾胃为“后天之本”、“气血生化之源”。
 
