--- a/ok/wk/wk13-0.5.0.0.0.md
+++ b/ok/wk/wk13-0.5.0.0.0.md
@@ -28,7 +28,7 @@
 
 （二）论治要点
 
-本病一般要形成肛痿，所以内治重点要清热解毒，尽快控制病情发展，但要辨清虚实。而后配合外治方法排脓泄毒，清除病灶，以图根治。
+本病一般要形成肛瘘，所以内治重点要清热解毒，尽快控制病情发展，但要辨清虚实。而后配合外治方法排脓泄毒，清除病灶，以图根治。
 
 （三）常见证治
 
@@ -38,7 +38,7 @@
 
 方药：黄连解毒汤合龙胆泻肝汤加减。
 
-成脓时，加炮甲珠，皂角刺；太便干结者，加大黄。
+成脓时，加炮甲珠，皂角刺；大便干结者，加大黄。
 
 2.阴虚湿热，患部肿物平塌，无明显红肿热痛，成脓缓慢，溃后出脓灰白稀薄，不臭或微臭，疮口凹陷。全身倦怠少力，或有低热，苔黄腻，脉弦细或濡缓。如属肺虚者，可兼见咳嗽，咯血，骨蒸盗汗；脾虚者兼见神疲纳呆，大便溏薄；肾虚者兼见腰痛遗精，耳鸣失眠等。证属阴液亏损，湿热下注。
 
@@ -58,7 +58,7 @@
 
 张XX，男，40岁。入院时症状：肛门左侧肿块大如鸡卵，色红发热，按之稍有应指感，全身伴有恶寒发热（体温39.7℃），头昏纳呆，口干不欲饮，溲少色黄，大便干结。此湿热下注，气血壅滞，而成肛痈，为日已久，势将化脓。拟清热利湿法，并配以外治，以观动静。1.炒条芩6克、槐米10克、银花30克、紫地丁30克、连翘10克、川柏6克、炙甲片5克、生草2克。水煎，内服。2.外敷青敷药。经内外并治三天，热退（体温36.8℃），局部肿痛大减，应指已不明显。又治十一天后肿消痛止而出院。
 
-按：本案热毒炽甚，已有化脓趋势，医者以清热解毒为主，和营通络为辅，外用清热消肿敷药，内外合治而收效。（节选自《许履和外科医案医话集》）
+ **按** ：本案热毒炽甚，已有化脓趋势，医者以清热解毒为主，和营通络为辅，外用清热消肿敷药，内外合治而收效。（节选自《许履和外科医案医话集》）
 
 〔简便验方〕
 
