--- a/ok/bc/bc03-0.3.3.0.0.md
+++ b/ok/bc/bc03-0.3.3.0.0.md
@@ -1,6 +1,6 @@
 ### 干地黄
 
-**〔原文〕甘苦而寒，沉阴而降。入手足少阴**心、肾。**厥阴**心包肝。**及手太阳经**。小肠。**滋阴退阳，生血涼血。治血虚发热**，经曰：阴虚生内热。**劳伤咳嗽**，咳嗽阴虚者，地黄丸为要药，亦能除痰。丹溪曰：久病阴火上升，津液生痰不生血，宜补血以制相火，其痰自除。**痿痹惊悸**，有触而心动曰惊，无惊而自动曰悸，即怔仲也。有因心虚火动者，有因肝虚胆怯者，有因水停心下者，火畏水故悸也。地黄能交心肾而益肝胆，亦能行水，故治之。 **吐衄尿血**， 痛为淋血，不痛为尿血。由心肾气结，或忧思房劳所致，多属虚寒，不可专作热治。**血运崩中**，经曰：阴虚阳搏谓之崩，**足下热痛，折跌绝筋**。生地一斤，瓜姜糟一斤，生姜四两，炒熟，罨伤折处，冷则易之。又生地汁三升，酒升半，煮服，下扑损瘀血，**填骨髓，长肌肉，利大小便，调经安胎。又能杀虫，治心腹急痛**，
+**〔原文〕甘苦而寒，沉阴而降。入手足少阴**心、肾。**厥阴**心包肝。**及手太阳经**。小肠。**滋阴退阳，生血涼血。治血虚发热**，经曰：阴虚生内热。**劳伤咳嗽**，咳嗽阴虚者，地黄丸为要药，亦能除痰。丹溪曰：久病阴火上升，津液生痰不生血，宜补血以制相火，其痰自除。**痿痹惊悸**，有触而心动曰惊，无惊而自动曰悸，即怔忡也。有因心虚火动者，有因肝虚胆怯者，有因水停心下者，火畏水故悸也。地黄能交心肾而益肝胆，亦能行水，故治之。 **吐衄尿血**， 痛为淋血，不痛为尿血。由心肾气结，或忧思房劳所致，多属虚寒，不可专作热治。**血运崩中**，经曰：阴虚阳搏谓之崩，**足下热痛，折跌绝筋**。生地一斤，瓜姜糟一斤，生姜四两，炒熟，罨伤折处，冷则易之。又生地汁三升，酒升半，煮服，下扑损瘀血，**填骨髓，长肌肉，利大小便，调经安胎。又能杀虫，治心腹急痛**，
 《海上方》：捣汁和面作饦食，能利出虫，忌用盐。《本草汇》曰：丹溪云气病补血，虽不中病，亦无害也。不知血药属阴，其性凝滞，若胃虚气弱之人，过服归、地等剂，反致痞闷，饮食减少，变证百出，至死不悟，岂不惜哉！大抵血虚，固不可专补其气； 而气虚亦不可徒补其血也。凡劳病，阳虚宜四君补气；阴虚宜四物补血；阴阳俱虚者，宜合用，名八珍汤。**江浙生者，南方阳气力微；北方生者，纯阴力大，以怀庆肥大菊花心**（1）**者良。酒制则上行外行**，**姜制则不泥膈。恶贝母，畏芜荑。忌莱菔、葱蒜、铜铁器。得酒、门冬、丹皮、当归良**。
 
 【讲解】（1）菊花心：地黄断面，射线在木质部中形成的裂隙，呈放射状，状如菊花，故名菊花心。
