--- a/ok/ek/ek0zl08-0.2.0.0.0.md
+++ b/ok/ek/ek0zl08-0.2.0.0.0.md
@@ -26,7 +26,7 @@
 
 一儿暑病热极、脉微肢冷，面赤气短，医者仍作热证治，徐灵胎曰：“此即刻亡阳矣，急进参附汤以回其阳，但此证乃热病所变。因热甚汗出而亡阳，苟非脉微足冷，汗出舌润，则仍是热证，误用即死”（《洄溪医案》）
 
-如夏令热伤元气，气短怠倦，口渴多汗，宜参脉散以双补气阴，加黄芪，甘草名补气汤治自汗、怔仲，能使足力湧出。
+如夏令热伤元气，气短怠倦，口渴多汗，宜参脉散以双补气阴，加黄芪，甘草名补气汤治自汗、怔忡，能使足力湧出。
 
 一儿甫七岁，“诊得脉虚，身热自汗，是伤于暑也，气不足以息，言不足以听。是正气不胜也。医投发散清凉，恐汗出不止，即难救药。宜以参、芪为君，东垣谓参、芪、甘草、甘温能除大热，合千金生脉散，为长夏体虚受暑之主药……”。（《历代儿科医案集成》）
 
