--- a/ok/qs/qs03_11.md
+++ b/ok/qs/qs03_11.md
@@ -134,7 +134,7 @@
 
 **辰砂桔麝木香入，治疗惊怖意不定。**
 
-本方由人参、白术、黄芪、当归、甘草、茯神、远志、酸枣仁、木香、龙眼肉、生姜、大枣等十二味药组成。功能健脾养心，益气生血。主治劳伤心脾，怔仲健忘、食少不眠。亦治妇人脾虚月经不尽。
+本方由人参、白术、黄芪、当归、甘草、茯神、远志、酸枣仁、木香、龙眼肉、生姜、大枣等十二味药组成。功能健脾养心，益气生血。主治劳伤心脾，怔忡健忘、食少不眠。亦治妇人脾虚月经不尽。
 
 妙香散由人参、黄芪、甘草、茯神、茯苓、山药、远志、朱砂、桔梗、麝香、木香等十一味药组成。主治心气不足，惊悸恐怖、虚烦少睡、饮食无味，心神不宁等证。
 
