--- a/ok/qs/qs01_01.md
+++ b/ok/qs/qs01_01.md
@@ -163,7 +163,7 @@
 
 怔忡  zhēng chōng，读征冲。心跳不安。
 
-赤者心之色，故心病则面见红色。喜属心的情志，所以心病时，可有自喜自笑的神情表现。心开窍于舌，故病则色红赤。心主热，故病则口干心烦。心之部位在上，故病则脐上有动气。心居胸中，故病则心胸痛，并健忘，惊悸，怔仲，不安。热乘心实，则发狂昏冒。神怯心虚，则凄然好悲。
+赤者心之色，故心病则面见红色。喜属心的情志，所以心病时，可有自喜自笑的神情表现。心开窍于舌，故病则色红赤。心主热，故病则口干心烦。心之部位在上，故病则脐上有动气。心居胸中，故病则心胸痛，并健忘，惊悸，怔忡，不安。热乘心实，则发狂昏冒。神怯心虚，则凄然好悲。
 
 **18.脾黄善忧，当脐动气。善思食少，倦怠乏力。**
 
