--- a/ok/gk/gk03-0.1.6.0.0.md
+++ b/ok/gk/gk03-0.1.6.0.0.md
@@ -48,6 +48,6 @@
 
 1.经络瘀阻：伤后瘀血肿胀严重，或骨折脱位移位，或治疗手术不当，或夹板固定欠妥。《素问•逆调论》说：“荣气虚则不仁，卫气虚则不用，荣卫俱虚，则不仁且不用。”经络既阻，荣卫之气不通，轻则局部痿软麻木，或暂时痿软麻木；重则不仁，经久难愈。
 
-2.气血亏虚：气有温煦、熏肤、充身、泽毛的功能，血有营养、滋润、灌溉一身的作用。若损伤后耗血伤气，或久病气血亏虚，均可导致肢体麻木。《景岳全书•非风》说：“气虚则血虚则木。”另外，气血亏损，风寒湿邪可乘虚而入，可产生各种痹证，疼痛麻木，严重者瘫痪不用。
+2.气血亏虚：气有温煦、熏肤、充身、泽毛的功能，血有营养、滋润、灌溉一身的作用。若损伤后耗血伤气，或久病气血亏虚，均可导致肢体麻木。《景岳全书•非风》说：“气虚则麻，血虚则木。”另外，气血亏损，风寒湿邪可乘虚而入，可产生各种痹证，疼痛麻木，严重者瘫痪不用。
 
 3.肢体废用：筋骨关节以刚为正，以柔为顺，以用为常，若损伤后，患肢固定时间过长，或卧床过久，或缺乏锻炼，久之则肌肉萎缩，肌腱挛缩，关节强直，甚至痿软而不用。
