--- a/ok/bc/bc16-0.3.6.0.0.md
+++ b/ok/bc/bc16-0.3.6.0.0.md
@@ -6,6 +6,6 @@
 
 秦白皮味甘，性寒，入肺经。甘寒性降，功专泻肺火以平喘， 行水饮以消肿。故凡肺热咳喘，痰多咳血，以及肺气壅实的痰饮水肿。胸胁胀满，小便不利等证，皆常用之。古代用其作线，以缝金疮外伤。	
 
-【临证应用】桑白皮用于肺热喘咳，常与地骨皮、甘草同用，如泻白散；与茯苓皮、生姜皮、大腹皮、陈皮等配伍，即五皮饮，是治疗水肿、小便不利之常用方剂。此外，近代研究本品还有降压作用’可用治高血病。
+【临证应用】桑白皮用于肺热喘咳，常与地骨皮、甘草同用，如泻白散；与茯苓皮、生姜皮、大腹皮、陈皮等配伍，即五皮饮，是治疗水肿、小便不利之常用方剂。此外，近代研究本品还有降压作用，可用治高血病。
 
 【用量用法】10—15克，煎服。行水宜生用，平喘止咳可炙用。
