--- a/ok/wk/wk14-0.5.0.0.0.md
+++ b/ok/wk/wk14-0.5.0.0.0.md
@@ -12,7 +12,7 @@
 
 （一）辨证要领
 
-一要辨性质：迅速肿胀疼痛，焮红属热；潮湿，渗液多？（而）臭，大片腐烂属湿。二要辨顺逆：经正确治疗后能迅速退热，好转者为顺；如果治之而高热不退，睾丸外露者为逆，有发生毒邪内陷的可能。
+一要辨性质：迅速肿胀疼痛，焮红属热；潮湿，渗液多而臭，大片腐烂属湿。二要辨顺逆：经正确治疗后能迅速退热，好转者为顺；如果治之而高热不退，睾丸外露者为逆，有发生毒邪内陷的可能。
 
 （二）论治要点
 
@@ -20,7 +20,7 @@
 
 （三）常见证治
 
-1,初期：全身恶寒发热，恶心呕吐，小便短赤，大便干结，阴囊红肿，焮热疼痛，2~3天后，阴囊肿胀严重，皮肤裂开，潮湿，其色紫黑，迅速溃烂，渗出有臭味的血样污水，然后流脓，最后腐肉大片脱落严重者，腐黑蔓延，可使整个囊皮脱尽，睾丸外露。一般舌质红，苔黄，脉象洪数。此为肝经湿热火毒蕴结。
+1,初期：全身恶寒发热，恶心呕吐，小便短赤，大便干结，阴囊红肿，焮热疼痛，2~3天后，阴囊肿胀严重，皮肤裂开，潮湿，其色紫黑，迅速溃烂，渗出有臭味的血样污水，然后流脓，最后腐肉大片脱落。严重者，腐黑蔓延，可使整个囊皮脱尽，睾丸外露。一般舌质红，苔黄，脉象洪数。此为肝经湿热火毒蕴结。
 
 治法：清泄肝火，利湿解毒
 
@@ -52,7 +52,7 @@
 
 〔应用例案〕
 
-孙XX,男，54岁，1973年4月28日入院初诊。6天前突然寒热大作阴囊焮红肿胀，灼热剧痛，第二日皮色即转紫黑，继之腐烂，脓水淋漓，臭气难闻，左侧阴囊皮肉已尽脱，睾丸外露，但睾丸未损伤，精神尚好，食欲略减。诊为脱囊。治以清肝利湿解毒。方用龙胆泻肝汤加银花、丹皮、赤苓各12克配用土霉素。外治以五宝丹撒于疮面，用凡士林纱布及消毒敷料固定，每天换药1次。5天后疼痛基本消失，疮面脓水减少，肉芽生长良好。右侧阴囊红肿消退。内服药改为：当归、川穹、白芍、生地、银花、连翘各9克，木通6克，车前子、赤苓、泽泻各12克，甘草3克。5剂后诸症进一步好转。停服土霉素。以托里消毒散去皂刺，加丹皮、泽泻各12克。处理8天已近痊愈，出院回家调养而愈。
+孙XX， 男，54岁，1973年4月28日入院初诊。6天前突然寒热大作，阴囊焮红肿胀，灼热剧痛，第二日皮色即转紫黑，继之腐烂，脓水淋漓，臭气难闻，左侧阴囊皮肉已尽脱，睾丸外露，但睾丸未损伤，精神尚好，食欲略减。诊为脱囊。治以清肝利湿解毒。方用龙胆泻肝汤加银花、丹皮、赤苓各12克。配用土霉素。外治以五宝丹撒于疮面，用凡士林纱布及消毒敷料固定，每天换药1次。5天后疼痛基本消失，疮面脓水减少，肉芽生长良好。右侧阴囊红肿消退。内服药改为：当归、川穹、白芍、生地、银花、连翘各9克，木通6克，车前子、赤苓、泽泻各12克，甘草3克。5剂后诸症进一步好转。停服土霉素。以托里消毒散去皂刺，加丹皮、泽泻各12克。处理8天已近痊愈，出院回家调养而愈。
 
 **按**：本病即使早期治疗亦无消散希望，仅能缩小溃烂范围。本例辨证准确，治以祛邪扶正，内治外治结合，故疗效满意。（节选自《张八卦外科新编》）
 
