--- a/ok/bc/bc04-0.0.2.0.0.md
+++ b/ok/bc/bc04-0.0.2.0.0.md
@@ -10,7 +10,7 @@
 
 苍术与白术来源于同一科属的植物，古时二者通用，后始分为两种。
 
-【临证应用】苍术气香，实为健脾燥湿之要药。湿阻中焦，脘腹胀满，大便泄泻者，本品配厚朴、陈皮、甘草，即平胃散，以除湿散满。用于风湿痹证，尤以湿邪偏胜而见肢节肌肉痠重肿痛者，常配防己、薏苡仁等，以加强祛湿作用。如痹证湿热偏胜，关节肿痛而红，可配黄柏，即二妙散；若再加牛膝，成三妙散；复加薏苡仁为四妙散。皆可治湿热下注，足膝肿痛、瘘软无力之证。因本品兼能发汗，配羌活、防风、细辛等亦适用于外感表证，肢体痠痛较重者。
+【临证应用】苍术气香，实为健脾燥湿之要药。湿阻中焦，脘腹胀满，大便泄泻者，本品配厚朴、陈皮、甘草，即平胃散，以除湿散满。用于风湿痹证，尤以湿邪偏胜而见肢节肌肉痠重肿痛者，常配防己、薏苡仁等，以加强祛湿作用。如痹证湿热偏胜，关节肿痛而红，可配黄柏，即二妙散；若再加牛膝，成三妙散；复加薏苡仁为四妙散。皆可治湿热下注，足膝肿痛、痿软无力之证。因本品兼能发汗，配羌活、防风、细辛等亦适用于外感表证，肢体痠痛较重者。
 
 此外，历代本草记载，苍术还能治夜盲症，有明目作用，早在《太平圣惠方》中，即用苍术为主，治青盲雀目。近来多与猪肝或羊肝配伍应用，治疗夜盲及现代医学之角膜软化证。
 
