--- a/ok/gl/gl06-0.2.0.0.0.md
+++ b/ok/gl/gl06-0.2.0.0.0.md
@@ -21,7 +21,7 @@
 
 |        |          | 病因病机                                                     | 症状                                                         | 舌象         | 脉象     |
 | ------ | -------- | ------------------------------------------------------------ | ------------------------------------------------------------ | ------------ | -------- |
-| 血虚证 |          | 多因脾胃虚弱，七情内伤或失血过多所致<br/>脾虚气血生化无源，七情过度，暗耗阴血，血虚失其滋养濡润之功 | 面色苍白或瘘黄，唇白无华、头晕眼花、心悸失眠，手足庥木，月经衍期，量少 | 舌淡         | 细而无力 |
+| 血虚证 |          | 多因脾胃虚弱，七情内伤或失血过多所致<br/>脾虚气血生化无源，七情过度，暗耗阴血，血虚失其滋养濡润之功 | 面色苍白或痿黄，唇白无华、头晕眼花、心悸失眠，手足庥木，月经衍期，量少 | 舌淡         | 细而无力 |
 | 血瘀证 | 血瘀气虚 | 气虚运血无力，以致气血淤滞                                   | 身倦乏力，少气自汗局部疼痛，痛如针剌，拒按                   | 舌紫暗有瘀斑 | 沉涩无力 |
 | 血瘀证 | 血瘀血虚 | 瘀血阻滞，新血不生                                           | 头晕眼花，心悸失眠兼有肿块，刺痛拒按                         | 舌淡有瘀斑   | 细涩     |
 | 血瘀证 | 客凝血脉 | 寒邪客于血脉，阳气困遏、血凝滞而不行                         | 疼痛喜按，得暖痛减。兼见形寒肢冷                             | 舌淡紫暗     | 沉迟而涩 |
