--- a/ok/qs/qs03_16.md
+++ b/ok/qs/qs03_16.md
@@ -66,7 +66,7 @@
 
 **若去寄生加芪续，汤名三痹古方珍。**
 
-**或去独寄与甘草，加羌续芷瘘痹行。**
+**或去独寄与甘草，加羌续芷痿痹行。**
 
 **三痹**  指痛痹、行痹、着痹，此处作方名。
 
@@ -124,7 +124,7 @@
 
 **酒丸酒下能通络，风血痰涎闭在经。**
 
-大活络丹由五十味药物组成，即：白花蛇、乌梢蛇、威灵仙、两头尖、草乌、全蝎、首乌、龟板、麻黄、贯仲、甘草、羌活、官桂、藿香、乌药、黄连、熟地黄、大黄、木香、沉香、细辛、赤芍，没药，丁香、乳香、姜虫、南星、青皮、骨碎补、白豆蔻、安息香、附子、黄芩、茯苓、人参、香附子、玄参、白术、防风、葛根、虎胫骨、梅片、当归、血竭、地龙、犀角、麝香、松脂、牛黄等，功能调补气血，祛风活络，主治中风后手足瘫废，瘘弱无力，并治阴疽、流注等症。
+大活络丹由五十味药物组成，即：白花蛇、乌梢蛇、威灵仙、两头尖、草乌、全蝎、首乌、龟板、麻黄、贯仲、甘草、羌活、官桂、藿香、乌药、黄连、熟地黄、大黄、木香、沉香、细辛、赤芍，没药，丁香、乳香、姜虫、南星、青皮、骨碎补、白豆蔻、安息香、附子、黄芩、茯苓、人参、香附子、玄参、白术、防风、葛根、虎胫骨、梅片、当归、血竭、地龙、犀角、麝香、松脂、牛黄等，功能调补气血，祛风活络，主治中风后手足瘫废，痿弱无力，并治阴疽、流注等症。
 
 小活络丹由川芎、草乌、地龙、南星、乳香、没药等六味药组成，功能活络止痛，主治中风后手足不仁和风湿痹痛，肢体麻木等症。
 
