--- a/ok/qs/qs03_11.md
+++ b/ok/qs/qs03_11.md
@@ -212,7 +212,7 @@
 
 **肺肾两调金水生，麦冬加入长寿丸。**
 
-本方由熟地黄、山萸肉、干山药、泽泻、牡丹皮、茯苓等六味药组成。功能滋阴补肾。主治腰膝瘘弱，烦热咽干等证。
+本方由熟地黄、山萸肉、干山药、泽泻、牡丹皮、茯苓等六味药组成。功能滋阴补肾。主治腰膝痿弱，烦热咽干等证。
 
 本方加入知母、黄柏，名知柏八味丸，功能滋阴补肾，清热泻火，主治骨蒸潮热，虚烦盗汗等证。
 
@@ -372,7 +372,7 @@
 
 **除却甘草鹿胶入，菟丝当归改丸作。**
 
-本方由熟地黄、山药、山茱萸、肉桂、枸杞子、附子、杜仲、炙甘草等八味药组成。功能温肾壮阳，填精补虚。主治腰酸阳瘘，食少便溏等症。
+本方由熟地黄、山药、山茱萸、肉桂、枸杞子、附子、杜仲、炙甘草等八味药组成。功能温肾壮阳，填精补虚。主治腰酸阳痿，食少便溏等症。
 
 本方去甘草，加鹿胶、菟丝子、当归，名右归丸，功能补肾填精，主治年老久病，阳痿遗精等症。
 
