--- a/ok/gk/gk03-0.2.1.0.0.md
+++ b/ok/gk/gk03-0.2.1.0.0.md
@@ -12,7 +12,7 @@
 
 （二）望局部 首先使伤肢裸露，采用与健侧对比的方法，识别其变异，必要时用器具测量，观察患肢功能障碍和出现形态异常。
 
-1.望畸形：骨折或脱位后，一般出现明显的畸形。伤后肢体短缩而有明显横错位者，多是脱位；肢体短缩而弯曲者，多是骨折；骨折后呈现的畸形和姿势易于改变，而脱位后呈现的畸形和姿势不易改变。不少的骨折和脱位，都有典型的畸形。如挠骨远端骨折向背侧错位的畸形；股骨颈骨折一般出现腿短、内收、外旋、膝直伸的畸形；髋关节前方脱位出现大腿延长、外旋、外展，髋关节后脱位出现大腿短缩、内旋、内收、膝屈曲。
+1.望畸形：骨折或脱位后，一般出现明显的畸形。伤后肢体短缩而有明显横错位者，多是脱位；肢体短缩而弯曲者，多是骨折；骨折后呈现的畸形和姿势易于改变，而脱位后呈现的畸形和姿势不易改变。不少的骨折和脱位，都有典型的畸形。如桡骨远端骨折向背侧错位的畸形；股骨颈骨折一般出现腿短、内收、外旋、膝直伸的畸形；髋关节前方脱位出现大腿延长、外旋、外展，髋关节后脱位出现大腿短缩、内旋、内收、膝屈曲。
 
 2.望肿胀及皮色：损伤后肿胀的轻重与损伤的轻重成正比，损伤轻则肿胀轻，损伤重则肿胀甚。一般筋伤肿胀轻，骨伤肿胀重，脱位较骨折肿胀轻，而较筋伤肿胀重。肿胀最甚处，多是损伤最重处。不变色的肿胀多是新伤，有瘀斑的肿胀多为伤已数日，青瘀斑边缘出现黄色，一般为伤后10日以上。凡有青瘀斑的肿胀都表明损伤比较重，多为骨折。肿胀而皮色发红发热，侧表明合并热毒结聚。
 
