--- a/ok/qs/qs02.md
+++ b/ok/qs/qs02.md
@@ -412,7 +412,7 @@
 
 **薏苡味甘，专除湿痹，筋节拘挛，肺痈肺痿。**
 
-薏苡仁味甘淡，性微寒，功能健脾利水除湿、清热排脓。治疗风寒湿痹以湿胜为主者和筋脉挛急、水肿、泄泻、尿少等症，并治咳嗽胸痛吐脓血的“肺痈”和咳吐稠痰涎沫的“肺瘘”。
+薏苡仁味甘淡，性微寒，功能健脾利水除湿、清热排脓。治疗风寒湿痹以湿胜为主者和筋脉挛急、水肿、泄泻、尿少等症，并治咳嗽胸痛吐脓血的“肺痈”和咳吐稠痰涎沫的“肺痿”。
 
 **肉蔻辛温，脾胃虚冷，泻痢不休，功可立等。**
 
@@ -994,7 +994,7 @@
 
 **楮** chu，读储，通称构树。
 
-楮实味甘、性平，功能补腎，壮筋骨，益气，明目。适用于肾虚筋骨软弱，腰膝无力，阳瘘，以及两目昏喑，视物模糊等症。
+楮实味甘、性平，功能补腎，壮筋骨，益气，明目。适用于肾虚筋骨软弱，腰膝无力，阳痿，以及两目昏喑，视物模糊等症。
 
 **郁李仁酸，破血润燥，消肿利便，关格通导。**
 
@@ -1042,7 +1042,7 @@
 
 **蛤蚧** ge jie，读格介。 **劳疰**  疰，zhu，读隹，肺痨病。
 
-蛤蚧味咸，性平，功能补肺肾，定喘咳。善治肺瘘气喘咳嗽和咳痰带血等症。调治肺痨病，功效也好。还能治阳痿、尿频等。
+蛤蚧味咸，性平，功能补肺肾，定喘咳。善治肺痿气喘咳嗽和咳痰带血等症。调治肺痨病，功效也好。还能治阳痿、尿频等。
 
 **蝼蛄味咸，治十水肿，上下左右，效不旋踵。**
 
@@ -1474,7 +1474,7 @@
 
 **阳起石甘，肾气乏绝，阳痿不起，其效甚捷。**
 
-阳起石味甘，性微温。功能温肾壮阳。用于肾阳虚的阳瘘和子宫虚寒不孕等症，治疗效果较快。亦用于腰膝冷痛、水肿、(疒征)瘕。
+阳起石味甘，性微温。功能温肾壮阳。用于肾阳虚的阳痿和子宫虚寒不孕等症，治疗效果较快。亦用于腰膝冷痛、水肿、(疒征)瘕。
 
 **桑椹子甘，解金石燥，清除热渴，染须发皓。**
 
@@ -1630,7 +1630,7 @@
 
 **韭**jiǔ，读久，韭菜。
 
-韭菜味辛，性温。功能通胃气、散寒邪，能治胃寒胀痛。韭汁可行淤散血；韭子能温肾固精，可治阳瘘、遗精、滑精、遗尿等症。
+韭菜味辛，性温。功能通胃气、散寒邪，能治胃寒胀痛。韭汁可行淤散血；韭子能温肾固精，可治阳痿、遗精、滑精、遗尿等症。
 
 **大蒜辛温，化肉消谷，解毒散痈，多用伤目。**
 
@@ -1888,7 +1888,7 @@
 
 **九香虫温，胃寒宜用，助阳温中，理气止痛。**
 
-九香虫味咸，性温。功能补肾助阳、温运脾阳、理气止痛。适用于中阳不运所致的脘膈气滞、胀闷疼痛及肝胃气痛；亦可用于肾阳不足引起的阳瘘、腰膝冷弱的尿频等症。
+九香虫味咸，性温。功能补肾助阳、温运脾阳、理气止痛。适用于中阳不运所致的脘膈气滞、胀闷疼痛及肝胃气痛；亦可用于肾阳不足引起的阳痿、腰膝冷弱的尿频等症。
 
 **玫瑰花温，疏肝解郁，理气调中，行淤活血。**
 
@@ -2034,7 +2034,7 @@
 
 **冬虫夏草，味甘性温，虚劳咳血，阳痿遗精。**
 
-冬虫夏草味甘，性温。功能滋补肺肾、止血化痰。可治劳嗽痰血、盗汗及阳瘘、遗精、病后虚损不复等症。
+冬虫夏草味甘，性温。功能滋补肺肾、止血化痰。可治劳嗽痰血、盗汗及阳痿、遗精、病后虚损不复等症。
 
 **锁阳甘温，壮阳补精，润燥通便，强骨养筋。**
 
@@ -2046,13 +2046,13 @@
 
 **杜仲甘温，腰痛脚弱，阳痿尿频，安胎良药。**
 
-杜仲味甘，性温。功能补肝肾、强筋骨、安胎。适用于肾虚腰痛、腰膝乏力、眩晕、阳瘘、小便频数及久患风湿，麻木痹痛等症；亦用于肝肾亏虚引起的妊娠漏血、胎动不安及习惯性流产。
+杜仲味甘，性温。功能补肝肾、强筋骨、安胎。适用于肾虚腰痛、腰膝乏力、眩晕、阳痿、小便频数及久患风湿，麻木痹痛等症；亦用于肝肾亏虚引起的妊娠漏血、胎动不安及习惯性流产。
 
 **沙苑子温，补肾固精，养肝明目，并治尿频。**
 
 苑 yuàn，读院。
 
-沙苑子味甘，性温。功能补益肝肾、固精、明目。可治肾虚阳瘘、遗精早泄、小便频数、耳鸣、肾虚腰痛；并治肝肾不足引起的头晕眼花、视力减退等症。
+沙苑子味甘，性温。功能补益肝肾、固精、明目。可治肾虚阳痿、遗精早泄、小便频数、耳鸣、肾虚腰痛；并治肝肾不足引起的头晕眼花、视力减退等症。
 
 **炉甘石平，去翳明目，生肌敛疮，燥湿解毒。**
 
