update ok/qs/qs03_01.md. 错字

--- a/ok/qs/qs03_01.md
+++ b/ok/qs/qs03_01.md
@@ -194,7 +194,7 @@
 
 本方加陈仓米，名仓廪散。主治痢疾毒气上冲，发热呕吐。
 
-连翘败毒散由羌活、连翘、栀子、川芎、玄参、薄荷、升麻、柴胡、当归、桔梗、防风、黄芩、芍药、红花、牛蒡子等十五味药组成。主治伤寒毒结面烦，耳下肿痛。
+连翘败毒散由羌活、连翘、栀子、川芎、玄参、薄荷、升麻、柴胡、当归、桔梗、防风、黄芩、芍药、红花、牛蒡子等十五味药组成。主治伤寒毒结面颊，耳下肿痛。
 
 ### [**理气解表**]
 
