--- a/ok/qs/qs01_04.md
+++ b/ok/qs/qs01_04.md
@@ -266,7 +266,7 @@
 
 **肺痈**   肺部发生痈疡、咳唾脓血的病症。   **肺痿**   阴虚肺伤的慢性衰弱性疾患。   **肠痈**    湿热留注肠中，气滯血淤，发为痈疡所致的疾患。   **痈疽**   yōng jū，读拥居，肿疡   表现为红肿高起，焮热疼痛，周围界限清楚，在未成脓之前无疮头而易消散，已成脓易溃破，溃后脓液稠粘，疮口易收敛的为痈；凡疮疡表现为漫肿平塌，皮色不变，不热少痛，未成脓难消，已成脓难溃，脓水清稀，破后难敛的为疸。
 
-痈疽未溃破时见到脉洪大为顺，等到溃破了以后脉还见洪大为逆。寸脉侯肺，肺痈病人的寸脉以数而实为顺，肺瘘是阴虚肺伤，所以脉应以数而无力为顺。痈疽部位的皮肤颜色稍白时，为气血凝滞所致，脉象以短涩为顺，如果脉见数大而重按无力，则多为气血虚损。肠痈为实热所致，脉以滑数为顺，如果出现了沉细无根的败脉，则为邪盛正虚，难以治愈，多为逆证。
+痈疽未溃破时见到脉洪大为顺，等到溃破了以后脉还见洪大为逆。寸脉侯肺，肺痈病人的寸脉以数而实为顺，肺痿是阴虚肺伤，所以脉应以数而无力为顺。痈疽部位的皮肤颜色稍白时，为气血凝滞所致，脉象以短涩为顺，如果脉见数大而重按无力，则多为气血虚损。肠痈为实热所致，脉以滑数为顺，如果出现了沉细无根的败脉，则为邪盛正虚，难以治愈，多为逆证。
 
 **28.妇人有子，阴搏阳别，少阴动甚，其胎已结。**
 
