--- a/ok/qs/qs03_18.md
+++ b/ok/qs/qs03_18.md
@@ -102,7 +102,7 @@
 
 **若于方中除粳米，山药丹芍桃仁增。**
 
-本方由麦门冬、半夏、人参、甘草、大枣、粳米等六味药组成，功能生津、降逆，主治咳唾涎沫，咽干，口燥，气短而喘之肺瘘。
+本方由麦门冬、半夏、人参、甘草、大枣、粳米等六味药组成，功能生津、降逆，主治咳唾涎沫，咽干，口燥，气短而喘之肺痿。
 
 原方去粳米，加山药、芍药、丹皮、桃仁名加减麦门冬汤，主治妇女倒经，经期吐血、衄血等症。
 
