--- a/ok/bc/bc01-1.1.17.0.0.md
+++ b/ok/bc/bc01-1.1.17.0.0.md
@@ -6,6 +6,6 @@
 
 **鸡苏又名龙脑薄荷、水苏，功同紫苏，然偏于理血。**为唇形科植物水苏的全草。茎方形，中空。叶较紫苏微长，呈长椭圆形，边缘有锯齿，叶面皱缩，脉多毛刺。
 
-本品味辛性微温。入肺、脾经。功能疏风下气，理血辟恶。用治感冒风邪，气逆血瘀、血热而致的头风目眩，肺瘘肺痈，吐血衄血崩漏，痢疾等证。以解散血中之气，气散则血散。能治喉腥口臭，是取其芳香辟浊之力。
+本品味辛性微温。入肺、脾经。功能疏风下气，理血辟恶。用治感冒风邪，气逆血瘀、血热而致的头风目眩，肺痿肺痈，吐血衄血崩漏，痢疾等证。以解散血中之气，气散则血散。能治喉腥口臭，是取其芳香辟浊之力。
 
 【**临证应用**】鸡苏的功用，类似紫苏、薄荷。《医林纂要》曰：鸡苏功用略似紫苏，而解毒不如；亦略似薄荷，而清凉不及。《本草求真》曰：但苏、薄其性稍凉，水苏其性稍温；苏、薄其性主升，水苏其性主降；薄多于气分疏散，水苏多于血分温利。然临床不及紫苏、薄荷常用。
