--- a/ok/wk/wk14-0.6.0.0.0.md
+++ b/ok/wk/wk14-0.6.0.0.0.md
@@ -4,13 +4,13 @@
 
 〔病因病机〕
 
-本病属肝、脾、肾三经。睾丸属肾，肾主水液，先天不足，肾气亏虚，，气化不利，寒湿积聚阴囊，多发先天性水疝；肝经绕阴器，抵少腹，肝经气滞寒凝，肝郁乘脾，脾失健运，水湿下注阴囊而成；或跌仆损伤，或丝虫病侵犯，阴囊部气滞血瘀，水湿流行受阻而发。
+本病属肝、脾、肾三经。睾丸属肾，肾主水液，先天不足，肾气亏虚，气化不利，寒湿积聚阴囊，多发先天性水疝；肝经绕阴器，抵少腹，肝经气滞寒凝，肝郁乘脾，脾失健运，水湿下注阴囊而成；或跌仆损伤，或丝虫病侵犯，阴囊部气滞血瘀，水湿流行受阻而发。
 
 〔辨证论治〕
 
 （一）辨证要领
 
-一是发病缓慢多为单侧阴囊肿大，触诊时可触及囊状肿物，透光试验阳性。继发者多有外伤史，或者丝虫病史。二是本病阴囊肿胀光亮，不红不热，甚或发凉坠胀，故多为寒湿凝聚肝肾。三是本病应与腹股沟斜疝相鉴别。
+一是发病缓慢，多为单侧阴囊肿大，触诊时可触及囊状肿物，透光试验阳性。继发者多有外伤史，或者丝虫病史。二是本病阴囊肿胀光亮，不红不热，甚或发凉坠胀，故多为寒湿凝聚肝肾。三是本病应与腹股沟斜疝相鉴别。
 
 腹股沟斜疝：病人咳嗽时，肿大的阴囊有冲击感，但无波动，透光试验阴性，平卧时能迅速还纳。
 
@@ -20,13 +20,13 @@
 
 （三）常见证治
 
-l.先天性水疝：阴囊肿大呈圆形或长圆形，偏坠一侧，触之有囊性肿物，甚则亮如水晶，不红不热，亦不疼痛，自觉坠胀，或阴囊寒冷，或有睡卧时逐渐缩小，行立时逐渐胀大常见于婴幼儿，脉沉，苔白。此为脾肾不足，不能温运水液，气化不利。
+l.先天性水疝：阴囊肿大呈圆形或长圆形，偏坠一侧，触之有囊性肿物，甚则亮如水晶，不红不热，亦不疼痛，自觉坠胀，或阴囊寒冷，或有睡卧时逐渐缩小，行立时逐渐胀大。常见于婴幼儿，脉沉，苔白。此为脾肾不足，不能温运水液，气化不利。
 
 治法：健脾，温阳，利水。
 
 方药：五苓散加味。
 
-若面色苍黄，腹泻纳呆，脾运不健者，加黄芪、党参、焦山楂；阴囊冷者，加干姜炒小茴香、巴戟天。
+若面色苍黄，腹泻纳呆，脾运不健者，加黄芪、党参、焦山楂；阴囊冷者，加干姜、炒小茴香、巴戟天。
 
 2.继发性水疝：起病缓慢，阴囊肿胀，上连精索，牵拉睾丸或索肿块随之下移，下腹部抽痛不适。久则皮肤顽厚，发冷，坠胀不适，肿胀严重时，阴茎隐缩，影响排尿，脉弦、苔白。证属肝气失疏，寒湿外侵，水湿内结。
 
