--- a/ok/fjx/fjx03-0.1.0.0.0.md
+++ b/ok/fjx/fjx03-0.1.0.0.0.md
@@ -22,4 +22,4 @@
 
 若本方加赤芍、桃仁、炒莱菔子，名曰复方大承气汤。其功用为通里攻下，行气活血。主治：阳明腑实证而气胀明显者。
 
-〔文献摘录〕吴鞠通：“此苦辛通降，咸以入阴法。承气者，承胃气也。盖胃之为腑，体阳而用阴，若在无病时，本系自然下降，今为邪气蟠蜛于中，阻其下降之气，胃虽自欲下降而不能，非药力助之不可，故承气汤通胃结，救胃阴，仍系承胃腑本来下降之气，……故得各承气。学者若真能透彻此义，则施用承气，自无弊窦。大黄荡涤热结，芒硝入阴软坚，枳实开幽冂之不通，厚朴泻中宫之实满，大承气者，合四药而观之，可谓无坚不破，无微不入，故四大也。非真正实热蔽痼，气血俱结者，不用也。”（《温病条辨》）
+〔文献摘录〕吴鞠通：“此苦辛通降，咸以入阴法。承气者，承胃气也。盖胃之为腑，体阳而用阴，若在无病时，本系自然下降，今为邪气蟠蜛于中，阻其下降之气，胃虽自欲下降而不能，非药力助之不可，故承气汤通胃结，救胃阴，仍系承胃腑本来下降之气，……故得各承气。学者若真能透彻此义，则施用承气，自无弊窦。大黄荡涤热结，芒硝入阴软坚，枳实开幽门之不通，厚朴泻中宫之实满，大承气者，合四药而观之，可谓无坚不破，无微不入，故四大也。非真正实热蔽痼，气血俱结者，不用也。”（《温病条辨》）
