--- a/ok/fjx/fjx01-0.3.0.0.0.md
+++ b/ok/fjx/fjx01-0.3.0.0.0.md
@@ -12,4 +12,4 @@
 
 小青龙汤是以治“喘”为主，系外有风寒内有痰饮，以解表为主；射干麻黄汤是以治“哮”为主，系用于寒饮咳喘，喉间哮鸣不得平卧者，以化饮为主。
 
-〔方论选录〕张秉成：“治伤寒表不解，心下有水气，干呕而咳，或渴、或利等证。前方（指大青龙汤）因内有郁热而表不解，此方因内有水气，而表不解。然水气不除，肺气壅遏，营卫不通，虽发表，何由得汗，故用麻黄、桂枝解其表，必以细辛、干姜、半夏等辛辣之品，散其胸中之水，使之随汗而解。金匮所谓腰以上者当发汗，即内经之开鬼冂也。水饮内蓄，肺必逆而上行，而见喘促上气等证。肺苦气上逆，急食酸以收之，故以芍药、五味子、甘草三味，一以防其肺气耗散，一则缓麻桂姜辛之刚猛也。”（《成方便读》）
+〔方论选录〕张秉成：“治伤寒表不解，心下有水气，干呕而咳，或渴、或利等证。前方（指大青龙汤）因内有郁热而表不解，此方因内有水气，而表不解。然水气不除，肺气壅遏，营卫不通，虽发表，何由得汗，故用麻黄、桂枝解其表，必以细辛、干姜、半夏等辛辣之品，散其胸中之水，使之随汗而解。金匮所谓腰以上者当发汗，即内经之开鬼门也。水饮内蓄，肺必逆而上行，而见喘促上气等证。肺苦气上逆，急食酸以收之，故以芍药、五味子、甘草三味，一以防其肺气耗散，一则缓麻桂姜辛之刚猛也。”（《成方便读》）
