--- a/ok/wk/wk14-0.7.0.0.0.md
+++ b/ok/wk/wk14-0.7.0.0.0.md
@@ -18,7 +18,7 @@
 
 （三）常见证治
 
-患者常有会阴不适下坠感，排尿时轻微刺痛，部分患者排尿不畅阴茎背部可触及单个或多个硬结，硬结边界清楚，活动度小，发展缓慢，但终不溃烂，亦不引起恶变。性生活时可出现勃起疼痛，勃起不坚和勃起弯曲，严重者可有阳痿。证属厥阴气滞，痰瘀互结。
+患者常有会阴不适下坠感，排尿时轻微刺痛，部分患者排尿不畅。阴茎背部可触及单个或多个硬结，硬结边界清楚，活动度小，发展缓慢，但终不溃烂，亦不引起恶变。性生活时可出现勃起疼痛，勃起不坚和勃起弯曲，严重者可有阳痿。证属厥阴气滞，痰瘀互结。
 
 治法：化痰散结，理气活血。
 
