--- a/ok/qs/qs05.md
+++ b/ok/qs/qs05.md
@@ -114,7 +114,7 @@
 
 名，字嘉言。
 
-到了清朝时代，只有柯韵伯能够将《伤寒论》的奥义(包概理法方药）整理出来，他的《伤寒来苏集》对注解伤寒论來在，能像“宪章”那样严谨。至丁徐忠可的《金匮要略论注》和尤在泾的《伤寒贯珠集》、《金匮心典》、《金匮翼》这些著作，都有其成功之处。而徐、尤与喻昌在学术思想上，有一定渊源关系。
+到了清朝时代，只有柯韵伯能够将《伤寒论》的奥义(包概理法方药）整理出来，他的《伤寒来苏集》对注解伤寒论来在，能像“宪章”那样严谨。至丁徐忠可的《金匮要略论注》和尤在泾的《伤寒贯珠集》、《金匮心典》、《金匮翼》这些著作，都有其成功之处。而徐、尤与喻昌在学术思想上，有一定渊源关系。
 
 **大作者、推钱塘。**
 
@@ -134,7 +134,7 @@
 
 **中风** 中，zhong，读众，射箭对准了目标称中。此处中风为病名。  **骤**  zhou，读绉，疾速，突然。  **八方** 东、南、西、北、东北、西北、东南、西南八个方位。
 
-《内经》说:“风为百病之长”，人类所患的各种疾病中，首先值得注意的是中风病，这种病大都来势猛骤，引起这种病的原因很多，可以说來自四面八方。
+《内经》说:“风为百病之长”，人类所患的各种疾病中，首先值得注意的是中风病，这种病大都来势猛骤，引起这种病的原因很多，可以说来自四面八方。
 
 **闭与脱，大不同，开邪闭，续命雄，固气脱，参附功。**
 
