update ok/qs/qs03_06.md. 错字

--- a/ok/qs/qs03_06.md
+++ b/ok/qs/qs03_06.md
@@ -132,7 +132,7 @@
 
 本方由龙胆草、栀仁、黄芩、柴胡、生地、泽泻、木通、甘草、当归、车前子等十味药组成。功能清泻肝经湿热。主治胁痛口苦，目赤耳肿以及小便淋浊、阴痒、阴肿等症。
 
-当归龙荟丸由当归、龙胆草、芦荟、黄连、黄芩、黄柏、大黄、木香、康香、黑栀仁、青黛等十一味药组成。主治肝经实火导致之头晕目眩、谵语发狂、大便结、小便黄等症。
+当归龙荟丸由当归、龙胆草、芦荟、黄连、黄芩、黄柏、大黄、木香、麝香、黑栀仁、青黛等十一味药组成。主治肝经实火导致之头晕目眩、谵语发狂、大便结、小便黄等症。
 
 **12.泻青丸**
 
@@ -142,7 +142,7 @@
 
 本方由龙脑(冰片)、栀仁、大黄、羌活、防风、川芎、当归等七味药组成。功能清肝泻火。主治火郁肝经之易惊多怒、目赤肿痛。
 
-**13.左金丸**(附：戊已丸、香连九、连附六一汤)
+**13.左金丸**(附：戊己丸、香连九、连附六一汤)
 
 **左金茱连六一丸，肝经火郁吐吞酸，**
 
