--- a/ok/rm/rm03-0.7.0.0.0.md
+++ b/ok/rm/rm03-0.7.0.0.0.md
@@ -10,9 +10,9 @@
 
 > 在中医学中，神有广义，狭义之分。
 >
-> 广义的神，是指整个人体生命活动的外在表现，是对人体生命活动现象的总称。它的物质基础是精与气。正如《灵枢·本神》说：“两精相搏谓之神”，《灵枢·平人绝谷》说，“故神者，水谷之精气也”。都是说明神来源于精与气。广义的神在人体生命活动中至关重要。《素问·移精变气论》说：“得神者昌，失神者亡”，就突出强调了它的重要性。
+> 广义的神，是指整个人体生命活动的外在表现，是对人体生命活动现象的总称。它的物质基础是精与气。正如《灵枢•本神》说：“两精相搏谓之神”，《灵枢•平人绝谷》说，“故神者，水谷之精气也”。都是说明神来源于精与气。广义的神在人体生命活动中至关重要。《素问•移精变气论》说：“得神者昌，失神者亡”，就突出强调了它的重要性。
 >
-> 狭义的神，是指人的精神、意识、思维活动。心主神明，正是说心是人体精神活动的主宰。故《素问·灵兰秘典论》说：“心者，君主之官也，神明出焉”
+> 狭义的神，是指人的精神、意识、思维活动。心主神明，正是说心是人体精神活动的主宰。故《素问•灵兰秘典论》说：“心者，君主之官也，神明出焉”。
 >
 > 《中医药学概论-心、小肠》
 
@@ -22,7 +22,7 @@
 
 ### 2、生成
 
-人的气血、五脏发育完成，神就自然生成。所谓“神气舍心、魂魄毕具，乃成为人”
+人的气血、五脏发育完成，神就自然生成。所谓“神气舍心、魂魄毕具，乃成为人”。
 
 > 何者为神？岐伯曰，血气已和，营卫已通，五藏已成、**神气舍心，魂魄毕具**，乃成为人。
 >
@@ -30,7 +30,7 @@
 
 ### 3、功能
 
-魂魄在教材中没有详细谈，比如对于魄，只提到是人的本能活动与低级反应，但是具体什么本能活动、哪些低级反应？并没有详细交代。所以这里参考了一些道家经典《云笈七签》、《抱朴子》的内容
+魂魄在教材中没有详细谈，比如对于魄，只提到是人的本能活动与低级反应，但是具体什么本能活动、哪些低级反应？并没有详细交代。所以这里参考了一些道家经典《云笈七签》、《抱朴子》的内容：
 
 神的功能是对人体进行管理，分为高级管理功能和低级管理功能，对应魂魄。
 
@@ -44,9 +44,9 @@
 
 #### 3.1、低级管理功能（魄）
 
-魄是神的一种，传统上称“七魄”
+魄是神的一种，传统上称“七魄”。
 
-关于七魄，《云笈七签》中提到七魄为：第一魄尸狗，第二魄伏矢，第三魄雀阴，第四魄吞贼，第五魄非毒，第六魄除秽，第七魄臭肺。但是关于七魄的具体功能，在典籍中没有找到明确的说法，如果大家有更详细的资料，欢迎补充。
+关于七魄，《云笈七签》中提到七魄为：第一魄**尸狗**，第二魄**伏矢**，第三魄**雀阴**，第四魄**吞贼**，第五魄**非毒**，第六魄**除秽**，第七魄**臭肺**。但是关于七魄的具体功能，在典籍中没有找到明确的说法，如果大家有更详细的资料，欢迎补充。
 
 将后人常见观点综合，魄的功能主要是人本能活动和低级反应，比如直觉、自主呼吸、自主消化吸收排泄能力、自主代谢、自主排毒等能力。
 
@@ -60,7 +60,7 @@
 
 魂也是神的一种，传统上称“三魂”。
 
-关于三魂，《云笈七签》中提到三魂为：第一魂胎光，第二魂爽灵，第三魂幽精。
+关于三魂，《云笈七签》中提到三魂为：第一魂**胎光**，第二魂**爽灵**，第三魂**幽精**。
 
 关于三魂的功能，主要是人的高级反应，比如意识、思维、情感、智慧等方面。
 
@@ -86,19 +86,19 @@
 
 ###### 意
 
-心有所忆谓之意:对事物表象进行认识，在心中产生的忆念活动称为忆
+心有所忆谓之意：对事物表象进行认识，在心中产生的忆念活动称为忆。
 
 ###### 志
 
-将忆念保持下来，即对事物表象认识的积累称为志
+将忆念保持下来，即对事物表象认识的积累称为志。
 
 ###### 思
 
-在形成忆念，并不断累积的基础上，进行酝酿思考，即对事物进行反复分析、比较的过程称为思
+在形成忆念，并不断累积的基础上，进行酝酿思考，即对事物进行反复分析、比较的过程称为思。
 
 ###### 虑
 
-反复思考的基础上，由近而远地估计未来变化的思维过程称为虑
+反复思考的基础上，由近而远地估计未来变化的思维过程称为虑。
 
 ###### 智
 
@@ -106,17 +106,17 @@
 
 综上所述，意志，属认识的感性阶段；思虑属认识的理性阶段。意、志、思、虑、智等五个不同的思维形式，反映了认识由现象深入本质，由低级进入高级的全过程。
 
-> 所以任物者谓之心，心有所忆谓之意，意之所存谓之志，因志而存变谓之思，因思而远慕谓之虑，因虑而处物谓之智，...
+> 所以任物者谓之心，心有所忆谓之意，意之所存谓之志，因志而存变谓之思，因思而远慕谓之虑，因虑而处物谓之智，……
 >
 > 心接受来自客观事物的刺激，并加以分析，最终作出反应的功能，是心藏神，主宰精神意识思维活动的具体体现，
 >
-> 心有所忆谓之意:对事物表象的认识。心中产生的忆念活动称为忆
+> 心有所忆谓之意：对事物表象的认识。心中产生的忆念活动称为忆，
 >
-> 将忆念保持下来，即对事物表象认识的积累称为志
+> 将忆念保持下来，即对事物表象认识的积累称为志，
 >
-> 反复酝酿思考，在形成忆念，并不断累积的基础上，进行酝酿思考，即对事物进行反复分析、比较的过程称为思
+> 反复酝酿思考，在形成忆念，并不断累积的基础上，进行酝酿思考，即对事物进行反复分析、比较的过程称为思，
 >
-> 反复思考的基础上，由近而远地估计未来变化的思维过程称为虑
+> 反复思考的基础上，由近而远地估计未来变化的思维过程称为虑，
 >
 > 在意志思虑的基础上，正确处理事物，即支配行为对事物作出恰当反应的功能称为智。
 >
@@ -130,15 +130,15 @@
 
 实际上，七情与五志是一致的，故合称“情志”。
 
-情志是人体对外界客观事物所做出的反映，是正常的**精神活动**
+情志是人体对外界客观事物所做出的反映，是正常的**精神活动**。
 
 情志是人的意识和思维的结果。
 
 人的情志活动与五脏有着密切的关系，如肝“在志为怒”，心“在志为喜”，脾“在志为思”，肺“在志为忧”，肾“在志为恐”。
 
-情志过度会对人体气血资源进行错误的调度，成为病因，所谓“内伤七情”
+情志过度会对人体气血资源进行错误的调度，成为病因，所谓“内伤七情”。
 
-##### 资料
+#### 资料
 
 > #### （一）情志致病的特点
 >
@@ -192,13 +192,11 @@
 >
 > 《黄帝内经讲解-十二脏的生理功能及其相互关系》
 
-
-
 #### 肝魂
 
 在神的支配下，辅佐神进行思维认识活动的称为魂。
 
-> 魂是在神支配下的思维意识活动，由肝所主，如肝不藏血，魂不守舍，就会产生梦游、梦语及幻觉，应从肝论治。《灵枢•本神》说：“肝悲哀动中则伤魂，魂伤则狂妄不精，不精则不正。”肝藏魂，悲哀太过则伤魂，魂主意识思维，故使人狂妄迷乱而不精明，言行失常。治宜补养肝血以安魂。但临床所见魂伤之证，大多病久，不是单纯补益肝血所能速愈，如《医宗必读》记载一例，峻补精血而愈，“一儒者，久困场屋吐衄盈盆，尫（wang）羸骨立，梦斗争恐怖，遇劳即发，补心安神，投之莫如。一读《素问》，乃知肝藏魂，肝藏血。作文苦衄血多，则魂失养，故交睫即魇。非峻不可？而草木力薄，以酒溶鹿角胶，空腹饮之，五曰而安卧，一月而神宁、鹿角峻补精血，血旺神自安”。
+> 魂是在神支配下的思维意识活动，由肝所主，如肝不藏血，魂不守舍，就会产生梦游、梦语及幻觉，应从肝论治。《灵枢•本神》说：“肝悲哀动中则伤魂，魂伤则狂妄不精，不精则不正。”肝藏魂，悲哀太过则伤魂，魂主意识思维，故使人狂妄迷乱而不精明，言行失常。治宜补养肝血以安魂。但临床所见魂伤之证，大多病久，不是单纯补益肝血所能速愈，如《医宗必读》记载一例，峻补精血而愈，“一儒者，久困场屋吐衄盈盆，尫（wang）羸骨立，梦斗争恐怖，遇劳即发，补心安神，投之莫如。一读《素问》，乃知肝藏魂，肝藏血。作文苦衄血多，则魂失养，故交睫即魇。非峻不可？而草木力薄，以酒溶鹿角胶，空腹饮之，五日而安卧，一月而神宁、鹿角峻补精血，血旺神自安”。
 >
 > 《黄帝内经讲解-神的产生及其物质基础》
 
@@ -220,11 +218,11 @@
 
 #### 脾意
 
-心有所忆谓之意:对事物表象的认识。心中产生的忆念活动称为忆
+心有所忆谓之意：对事物表象的认识。心中产生的忆念活动称为忆。
 
 #### 肾志
 
-将忆念保持下来，即对事物表象认识的积累称为志
+将忆念保持下来，即对事物表象认识的积累称为志。
 
 ### 6、神的意义
 
@@ -238,7 +236,7 @@
 
 所谓生病，是人体某些方面的失衡已经超出了神的调节能力，所以需要医药的帮助。但是医药的帮助是临时的、辅助性的，而神是持续的管理着人的健康平衡，如果神的管理能力已经极弱，单靠医药是不行的。所以养神显得极其重要。所谓“得神者生，失神者死”。
 
-> “**精神不进，志意不治，故病不可愈**。今精坏神去，营卫不可复收。何者？**嗜欲无穷，而忧患不止，精气驰坏，营泣卫除，故神去之而病不愈也**。”...
+> “**精神不进，志意不治，故病不可愈**。今精坏神去，营卫不可复收。何者？**嗜欲无穷，而忧患不止，精气驰坏，营泣卫除，故神去之而病不愈也**。”……
 >
 > “**病为本，工为标**，标本不得，邪气不服”（《素问•汤液醪醴论》)。《明医杂著》也指出：“必须病人受命，坚心定志，绝房室，息妄想，戒恼怒，节饮食，以自培其根，否则虽服良药，亦无他用。”治疗不但要准确辨证，选用适当的治疗手段，而且要健全志意，控制情绪和行为，自我调节精神活动，才能有利于疾病的痊愈。
 >
@@ -306,13 +304,13 @@
 >
 > 本文论述神的本源，即生命的起源问题，指出生命本源于天地之气，唯物地回答了这个问题。并具体讨论了神、魂、魄的概念及与精的关系。
 >
-> （1）“天”、“地”，合指自然。“我”，泛指一切生物，包括人类。“德”，得也。指大自然恩赐的精微物质，如阳光，雨露等。“气”，指自然界水液，气体等精微物质。德与气都是产生生命活动的物质基础，和人类赖以生存的物质条件，正如成？《？园日札》所说，“若其生物之本源，经言在天为德，在地为气。夫天未尝无气，地亦何尝无德，经分属之，亦互文见义耳。”“流”，下行。“薄”，上迫。天德下流，地气上交，阴阳相错，升降相因，始有生化之机，而产生生命活动。《内经》认为，生命本源于天地之气，生命是由自然界物质经过长期演化而形成的，强调“德”，“气”是先生命而存在的物质，有物质然后有生命，从而从生命的起源与本质等方面，为中医学奠定了唯物主义的基础。
+> （1）“天”、“地”，合指自然。“我”，泛指一切生物，包括人类。“德”，得也。指大自然恩赐的精微物质，如阳光，雨露等。“气”，指自然界水液，气体等精微物质。德与气都是产生生命活动的物质基础，和人类赖以生存的物质条件，正如成瓘《篛园日札》所说，“若其生物之本源，经言在天为德，在地为气。夫天未尝无气，地亦何尝无德，经分属之，亦互文见义耳。”，“流”，下行。“薄”，上迫。天德下流，地气上交，阴阳相错，升降相因，始有生化之机，而产生生命活动。《内经》认为，生命本源于天地之气，生命是由自然界物质经过长期演化而形成的，强调“德”，“气”是先生命而存在的物质，有物质然后有生命，从而从生命的起源与本质等方面，为中医学奠定了唯物主义的基础。
 >
 > （2）“精”，指新生命的起源物质。“两精”，指男女生殖之精。“相搏”，相互搏结，即结合在一起。神在《内经》有以下四种含义：
-> ①指自然界物质运动变化及其规律。如《素问•天元纪大论》说：“物生谓之化，物极谓之变。阴阳不测谓之神。”
-> ②指人体生命活动及其规律。如《素问•六节脏象论》说：“五味入口，藏于肠胃，味有所藏，以养五气，气和而生，津液相成，神乃自生。”
-> ③指人体生命活动的外在表现。《内经》认为神的状态集中地反映着整个机体的健康情况，是诊断疾病、判别预后的重要依据。正如《素问•移精变气论》所说：“得神者昌，失神者亡。”
-> ④指人的精神意识思维活动。如《灵枢，本神》说：“心藏脉，脉舍神。”本文中的神，指的是人体生命活动。构成人体的基本物质是精，人的形体与生命活动都起源于精，正如《灵枢•经脉》所说：“人始生，先成精。”所以男女两精相互搏结，所形成的孕育着新生命的原始物质叫做精，所形成的生命活动称为神。
+> ① 指自然界物质运动变化及其规律。如《素问•天元纪大论》说：“物生谓之化，物极谓之变。阴阳不测谓之神。”
+> ② 指人体生命活动及其规律。如《素问•六节脏象论》说：“五味入口，藏于肠胃，味有所藏，以养五气，气和而生，津液相成，神乃自生。”
+> ③ 指人体生命活动的外在表现。《内经》认为神的状态集中地反映着整个机体的健康情况，是诊断疾病、判别预后的重要依据。正如《素问•移精变气论》所说：“得神者昌，失神者亡。”。
+> ④ 指人的精神意识思维活动。如《灵枢•本神》说：“心藏脉，脉舍神。”本文中的神，指的是人体生命活动。构成人体的基本物质是精，人的形体与生命活动都起源于精，正如《灵枢•经脉》所说：“人始生，先成精。”所以男女两精相互搏结，所形成的孕育着新生命的原始物质叫做精，所形成的生命活动称为神。
 >
 > **“神”，指人的精神意识活动**。**“魂”，指思维意识活动**。如魂失去神的支配而单独活动，就会出现梦觉、幻觉、梦语、梦游等情况。故张景岳说：“魂之为言，如梦寐恍惚，变幻游行之境皆是也。”
 >
@@ -320,58 +318,52 @@
 >
 > “随神往来”，意指魂在神的支配下活动。在神的支配下，辅佐神进行思维认识活动的称为魂。
 >
-> “并精出入”意指魄是本能活动，所以与构成形体的精同时形成。与精同时形成的**本能活动与低级反应**称为魄。...
+> “并精出入”意指魄是本能活动，所以与构成形体的精同时形成。与精同时形成的**本能活动与低级反应**称为魄。……
 >
-> 心主神明，心脏的疾患，能导致心神失常，而出现怔仲、健忘、烦躁、啼笑无常等病证。如张元素《肝脏虚实标本用药式》说：“心藏神，为君火，••••••本病，诸热瞀瘈、**惊惑、谵语、烦乱、啼笑、詈骂、怔忡、健忘、自汗**诸痛痒疮。”心神失常的病证，大多应由心入手治疗。如怔忡之证，《罗氏会约医镜》说：“怔忡者，心中跳动不动，如击鼓然，凡事不能用心，一思更甚，此因思索过劳，心血虚损而然，治宜生血养心，稍加凉血之味。”又如健忘之证，《寿世保元》认为与心脾有关，说：“夫健忘者，陡然而忘其事也。尽心力思量不来，为事有始无终，言谈不知首尾。盖主于心脾二经，心之官则思，脾之官亦主思，此因思虑过度，伤心则血耗散，神不守舍；伤脾则胃气衰惫，而疾愈深。二者皆主人事，则卒然而忘也。盖心主血，因血少而不能养其真脏，或停饮而气郁以生痰，气既滞，脾不得舒，是病皆作。治之必须先养其心血，理其脾土，凝神定智之剂，日以调理，亦当以幽闲之处，安乐之中，使其绝于忧虑，远其六欲七情，如此渐安矣。”再如虚烦不得眠之证，大多因心血虚或心气虚所致，《症因脉治》认为治疗应分别补益心血与心气，指出：“心血虚不得卧之治，阴虚则阳必旺，故心血不足，皆是火症，宜壮水之主，以制阳光。治宜滋阴降火，用归芍天地煎，黄连安神丸；虚人，天王补心丹。”又说：“心气虚不得卧之因，真阳素乏，木不生火，心气虚则心主无威，心神失守，而夜卧不安之症作矣。心气虚不得卧之脉，左寸浮散，按之无神，左关无力，木不生火，肝肾脉迟，水中无火，肝肾脉浮，真阳无根。心气虚不得卧之治，脉散无神，人参养营汤、归脾汤；肝肾脉迟者，八味丸；左关脉弱者，补肝散。”
+> 心主神明，心脏的疾患，能导致心神失常，而出现怔仲、健忘、烦躁、啼笑无常等病证。如张元素《肝脏虚实标本用药式》说：“心藏神，为君火，……本病，诸热瞀瘈、**惊惑、谵语、烦乱、啼笑、詈骂、怔忡、健忘、自汗**诸痛痒疮。”心神失常的病证，大多应由心入手治疗。如怔忡之证，《罗氏会约医镜》说：“怔忡者，心中跳动不动，如击鼓然，凡事不能用心，一思更甚，此因思索过劳，心血虚损而然，治宜生血养心，稍加凉血之味。”又如健忘之证，《寿世保元》认为与心脾有关，说：“夫健忘者，陡然而忘其事也。尽心力思量不来，为事有始无终，言谈不知首尾。盖主于心脾二经，心之官则思，脾之官亦主思，此因思虑过度，伤心则血耗散，神不守舍；伤脾则胃气衰惫，而疾愈深。二者皆主人事，则卒然而忘也。盖心主血，因血少而不能养其真脏，或停饮而气郁以生痰，气既滞，脾不得舒，是病皆作。治之必须先养其心血，理其脾土，凝神定智之剂，日以调理，亦当以幽闲之处，安乐之中，使其绝于忧虑，远其六欲七情，如此渐安矣。”再如虚烦不得眠之证，大多因心血虚或心气虚所致，《症因脉治》认为治疗应分别补益心血与心气，指出：“心血虚不得卧之治，阴虚则阳必旺，故心血不足，皆是火症，宜壮水之主，以制阳光。治宜滋阴降火，用归芍天地煎，黄连安神丸；虚人，天王补心丹。”又说：“心气虚不得卧之因，真阳素乏，木不生火，心气虚则心主无威，心神失守，而夜卧不安之症作矣。心气虚不得卧之脉，左寸浮散，按之无神，左关无力，木不生火，肝肾脉迟，水中无火，肝肾脉浮，真阳无根。心气虚不得卧之治，脉散无神，人参养营汤、归脾汤；肝肾脉迟者，八味丸；左关脉弱者，补肝散。”
 > 
 > 《黄帝内经讲解-气血精神-神的产生及其物质基础》
 
 
-
-
-> 一切生命活动，包括精神意识思维活动。神既以精气血为其物质基础，又是精气血的主宰，起着主管精气血形成和输布的作用。所以人的血气精神四者，相互为用，奉养生命，周遍全身， 以维持正常的生理功能。...
+> 一切生命活动，包括精神意识思维活动。神既以精气血为其物质基础，又是精气血的主宰，起着主管精气血形成和输布的作用。所以人的血气精神四者，相互为用，奉养生命，周遍全身， 以维持正常的生理功能。……
 >
-> “**志意**”，指人接受外界事物刺激后所引起的思维活动。这种思维活动具有自我调节、自我控制的能力，所以能发挥避免外来不良刺激影响的作用，**统摄整个精神意识思维活动**，**使思想集中，精神专一**。收敛魂魄，**调节人的思维活动控制人的动作行为**。**调节机体**，并使人接受“志意”的支配，采取适当的错施，以**适应自然界气候及饮食的寒温变化**。并通过“志意”的自我控制能力，调和情志，**使情志对外界刺激作出恰如其分的反应**，既不过分激动，也不过分低沉。...
+> “**志意**”，指人接受外界事物刺激后所引起的思维活动。这种思维活动具有自我调节、自我控制的能力，所以能发挥避免外来不良刺激影响的作用，**统摄整个精神意识思维活动**，**使思想集中，精神专一**。收敛魂魄，**调节人的思维活动控制人的动作行为**。**调节机体**，并使人接受“志意”的支配，采取适当的措施，以**适应自然界气候及饮食的寒温变化**。并通过“志意”的自我控制能力，调和情志，**使情志对外界刺激作出恰如其分的反应**，既不过分激动，也不过分低沉。……
 >
-> 中医学形神合一理论，在认为**形体对精神起决定作用**的同时，强调**精神意识也对形体的健康**发生着重要的影响。所以志意调和，不但能使思想集中，精神专一，魂魄不致散漫无常，**懊悔愤怒等异常情绪也无从产生**。而且还使五脏的功能，不至因为精神情志的变化，而引起气运失常，从而**使五脏功能正常**，正气健旺，不会受邪气的干扰而生病。...
+> 中医学形神合一理论，在认为**形体对精神起决定作用**的同时，强调**精神意识也对形体的健康**发生着重要的影响。所以志意调和，不但能使思想集中，精神专一，魂魄不致散漫无常，**懊悔愤怒等异常情绪也无从产生**。而且还使五脏的功能，不至因为精神情志的变化，而引起气运失常，从而**使五脏功能正常**，正气健旺，不会受邪气的干扰而生病。……
 >
-> 志意，是接受外界刺激后，通过思维，确定目的，以支配行动的心理活动。所以志意，能通过自我调节精神活动，反馈作用于五脏的功能活动，保证脏腑安和，增强抗病能力，所以如能注意调动患者的积极性，充分发挥其“志意”的能动作用，对于提高疗效缩短疗程有十分重要的意义。如《素问•汤液醪醴论》说：“**精神不进，志意不治，故病不可愈**。今精坏神去，营卫不可复收。何者？**嗜欲无穷，而忧患不止，精气驰坏，营泣卫除，故神去之而病不愈也**。”...
+> 志意，是接受外界刺激后，通过思维，确定目的，以支配行动的心理活动。所以志意，能通过自我调节精神活动，反馈作用于五脏的功能活动，保证脏腑安和，增强抗病能力，所以如能注意调动患者的积极性，充分发挥其“志意”的能动作用，对于提高疗效缩短疗程有十分重要的意义。如《素问•汤液醪醴论》说：“**精神不进，志意不治，故病不可愈**。今精坏神去，营卫不可复收。何者？**嗜欲无穷，而忧患不止，精气驰坏，营泣卫除，故神去之而病不愈也**。”……
 >
-> 所以《内经》十分强调发挥病人的主观能动性，提出医患要配合默契。认为“**病为本，工为标**，标本不得，邪气不服”（《素问•汤液醪醴论»)。《明医杂著》也指出：“必须病人受命，坚心定志，绝房室，息妄想，戒恼怒，节饮食，以自培其根，否则虽服良药，亦无他用。”治疗不但要准确辨证，选用适当的治疗手段，而且要健全志意，控制情绪和行为，自我调节精神活动，才能有利于疾病的痊愈。
+> 所以《内经》十分强调发挥病人的主观能动性，提出医患要配合默契。认为“**病为本，工为标**，标本不得，邪气不服”（《素问•汤液醪醴论》)。《明医杂著》也指出：“必须病人受命，坚心定志，绝房室，息妄想，戒恼怒，节饮食，以自培其根，否则虽服良药，亦无他用。”治疗不但要准确辨证，选用适当的治疗手段，而且要健全志意，控制情绪和行为，自我调节精神活动，才能有利于疾病的痊愈。
 >
 > 《黄帝内经讲解-血气精神的重要作用》
 
-
-
-> “神明”，指人的思维，意志和整个精神活动。心，主宰全身，具有君主的职能，**人的精神意识、思维活动，从心产生出来。**心之所以主宰人体生命活动，产生精神意识思维，在脏腑中居于首要地位，是因为“心主血脉”和“心主神明”的缘故。**精神意识活动虽与五脏有关，但都要受心的统帅和支配**。另一方面，心主神明的作用，又是在**心主血脉的基础上产生**。《灵枢•本神》说：“心藏脉，脉舍神。”十分精僻地说明了心、血脉与神志三者的内在联系。中医学把精神意识思维活动归属于心，实质上意在强调**神不能离开精的营养，精不能离开血液的营养**，所以《灵枢•营卫生会》说：“血者，神气也。”后世医家李东垣也明确指出：“**心之神……得血则生**”。...
+> “神明”，指人的思维，意志和整个精神活动。心，主宰全身，具有君主的职能，**人的精神意识、思维活动，从心产生出来。**心之所以主宰人体生命活动，产生精神意识思维，在脏腑中居于首要地位，是因为“心主血脉”和“心主神明”的缘故。**精神意识活动虽与五脏有关，但都要受心的统帅和支配**。另一方面，心主神明的作用，又是在**心主血脉的基础上产生**。《灵枢•本神》说：“心藏脉，脉舍神。”十分精僻地说明了心、血脉与神志三者的内在联系。中医学把精神意识思维活动归属于心，实质上意在强调**神不能离开精的营养，精不能离开血液的营养**，所以《灵枢•营卫生会》说：“血者，神气也。”后世医家李东垣也明确指出：“**心之神……得血则生**”。……
 >
 > **肝**为刚脏，喜条达而恶抑郁。肝气太过，失于疏泄，易于使**急躁发怒**。肝脏内寄相火，肝阳易于偏亢。所以将肝比喻为刚强急躁的将军。
 >
 > “谋”，策划。“虑”，思考。**肝主谋虑**，与肝气的升发作用以及肝藏血的功能有关。当人们深谋远虑，筹划策略，进行紧张思维活动的时候，需要肝气的升发和肝血的供给，而肝血的输送，又赖肝气的升发，故张景岳说：“木主发生，故为谋虑所出。”
 >
-> **胆者，中正之官，决断出焉**
+> **胆者，中正之官，决断出焉。**
 >
 > “中正”，古代（秦汉时代）考核人品的官职。“决断”，即判断决定。当人们对事物作出判断决定的时候，应持刚正果断的正确态度。此指胆有使人刚毅正直、不偏不倚，正确处理问题的功能。临床上**胆气虚**的患者，常表现为**易惊、易恐、多疑、不决**。可见胆在精神意识思维活动过程中，起着判断决定的作用。
 >
-> 肝胆在脏腑关系上相互为表里，肝主谋虑，胆主决断的功能，必须相互配合，才能进行正常的精神意识思维活动。肝性刚强果敢而善谋虑，但非胆不能决断，只有**肝胆相互配合，才能既有谋虑又有决断**，从而能正确处理事物。故《素问•奇病论》说：“肝者，中之将也，取决于胆。”张景岳也说：“肝气虽强，非胆不断，肝胆相济，勇敢乃成，故曰决斯出焉。...
+> 肝胆在脏腑关系上相互为表里，肝主谋虑，胆主决断的功能，必须相互配合，才能进行正常的精神意识思维活动。肝性刚强果敢而善谋虑，但非胆不能决断，只有**肝胆相互配合，才能既有谋虑又有决断**，从而能正确处理事物。故《素问•奇病论》说：“肝者，中之将也，取决于胆。”张景岳也说：“肝气虽强，非胆不断，肝胆相济，勇敢乃成，故曰决斯出焉。……
 >
-> “膻中”，这里指心包络。如《灵枢•胀论》说：“膻中者，心主之宫城也”。他处有指气海的。“臣使”，表达君主命令、意志的官员。此指膻中有保护心脏，代心行令的功能。外邪侵犯心脏，心包络代心受邪，所以具有保护心脏的作用。《灵枢•邪客》说，“**心者，五脏六腑之大主也，邪弗能容也，容之则心伤，心伤则神去，神去则死矣。故诸邪之在于心者，皆在于心之包络**”。心包代心受邪，故外邪侵犯心脏，常是心包先受影响，如叶天士所说：“温邪上受，首先犯肺，逆传心包。”心志喜，**膻中为臣使之官，代心行令，所以能传达心脏的喜乐情志，心的喜乐情志由它发出**。...
+> “膻中”，这里指心包络。如《灵枢•胀论》说：“膻中者，心主之宫城也”。他处有指气海的。“臣使”，表达君主命令、意志的官员。此指膻中有保护心脏，代心行令的功能。外邪侵犯心脏，心包络代心受邪，所以具有保护心脏的作用。《灵枢•邪客》说，“**心者，五脏六腑之大主也，邪弗能容也，容之则心伤，心伤则神去，神去则死矣。故诸邪之在于心者，皆在于心之包络**”。心包代心受邪，故外邪侵犯心脏，常是心包先受影响，如叶天士所说：“温邪上受，首先犯肺，逆传心包。”心志喜，**膻中为臣使之官，代心行令，所以能传达心脏的喜乐情志，心的喜乐情志由它发出**。……
 >
-> **肾者，作强之官，伎巧出焉**
+> **肾者，作强之官，伎巧出焉。**
 >
-> 肾为藏精之脏，贮藏先天之精和后天之精，肾精足能充养肉骼，补益脑髓。**骨强则能耐受重劳，动作有力；髓足则精神健旺，精巧灵敏**。张景岳说：“肾属水而藏精，精为有形之本，精盛形成，则作用强，故为作强之官。水能化生万物，精妙莫测，故曰伎巧出焉。”这说明体力的强弱，**智力的发达与否，都与肾有密切关系**。所以肾精不足的患者，常有腰膝痠软，四肢无力，精神不振，头昏健忘，智力减退等虚弱症候出现。...
+> 肾为藏精之脏，贮藏先天之精和后天之精，肾精足能充养肉骼，补益脑髓。**骨强则能耐受重劳，动作有力；髓足则精神健旺，精巧灵敏**。张景岳说：“肾属水而藏精，精为有形之本，精盛形成，则作用强，故为作强之官。水能化生万物，精妙莫测，故曰伎巧出焉。”这说明体力的强弱，**智力的发达与否，都与肾有密切关系**。所以肾精不足的患者，常有腰膝痠软，四肢无力，精神不振，头昏健忘，智力减退等虚弱症候出现。……
 >
-> **主不明则十二官危，使道闭塞而不通，形乃大伤，以此养生则殃**
+> **主不明则十二官危，使道闭塞而不通，形乃大伤，以此养生则殃。**
 >
 > “使道”，相使之道。王冰说：“谓**神气行使之道**也。”即十二脏相互通行气血的道路。“宗”，指宗庙，引申为国家的统治地位。在十二官中，心为五脏六腑之大主，对各脏腑功能活动起着统帅调节的作用，所以心脏功能正则**血脉运行流畅，神有所主**，各脏腑协调统一，才会有正常的生理活动，所以说“主明则下安”。根据这个道理养生，就能健康长寿，终身不会发生重病，比拟一个国家而言，领导英明，各部门配合得好，国家就一定强盛。反之，如**心脏功能不足，则人体脏腑之间相互协调的关系便会破坏，各脏腑都要受到危害，气血通行的道路也会闭塞不通，使形体遭受很大的损伤**，就会影响人的健康和寿命。譬之国家，则必使天下大乱，政权不稳，这是必须引起深刻注意的。
 >
 > 《黄帝内经讲解-藏象-十二脏的生理功能及其相互关系》
 
-
-
 > **心者，五藏六腑之大主也，精神之所舍也，其藏坚固，邪弗能容也。容之则心伤，心伤则神去，神去则死矣。**
 >
-> “精神之所舍”，指藏神的处所。人的精神意识思维活动，虽分属五脏，与五脏的心理功能有密切的联系。但又**由心产生，由心主宰**，因此七精所伤，总由心先受之，而后影响他脏。如心神思虑过度则伤脾、心神忧伤太过则伤肺，所以从心主神明，直接影响着五脏六腑生理功能协调平衡这一点而言，**心是藏神的处所，又是五脏六腑的主宰**。正如张景岳所说：“**心为脏腑之主，而总统魂魄，并赅意志，故忧动于心则肺应，思动于心则脾应，怒动于心则肝应，恐动于心则肾应，此所以五志唯心所使**也。”
+> “精神之所舍”，指藏神的处所。人的精神意识思维活动，虽分属五脏，与五脏的心理功能有密切的联系。但又**由心产生，由心主宰**，因此七精所伤，总由心先受之，而后影响他脏。如心神思虑过度则伤脾、心神忧伤太过则伤肺，所以从心主神明，直接影响着五脏六腑生理功能协调平衡这一点而言，**心是藏神的处所，又是五脏六腑的主宰**。正如张景岳所说：“**心为脏腑之主，而总统魂魄，并赅意志，故忧动于心则肺应，思动于心则脾应，怒动于心则肝应，恐动于心则肾应，此所以五志唯心所使也。**”
 >
 > 心为五脏六腑的主宰，为藏神的处所，其器质坚固，有心包络护卫于外，处邪不能伤及，而且也不容外邪侵入。
 >
@@ -387,19 +379,18 @@
 
 #### 《黄帝内经》
 
-> *余闻上古有真人者，提挈天地，把握阴阳，呼吸精气，**独立守神**，肌肉若一，故能寿敝天地，无有终时，此其道生*
+> *余闻上古有真人者，提挈天地，把握阴阳，呼吸精气，**独立守神**，肌肉若一，故能寿敝天地，无有终时，此其道生。*
 >
 > 今时之人不然也，以酒为浆，以妄为常，醉以入房，以欲竭其精，以耗散其真，不知持满，**不时御神**，务快其心，逆于生乐，起居无节，故半百而衰也。
 >
-> ——《黄帝内经•》
+> ——《黄帝内经•素問•上古天真論篇第一》
 
-> **血、脉、营、气、精、神，此五藏之所藏也⑴。至其淫泆离脏则精失，魂魄飞扬，志意恍乱，智虑去身。**
+> **血、脉、营、气、精、神，此五藏之所藏也。至其淫泆离脏则精失，魂魄飞扬，志意恍乱，智虑去身。**
 >
 > ——《灵枢•本神》
 
-## 题目
+### 题目
 
-1. 魂、魄管理人体的平衡，其中 __ __ 管理高级功能，比如思想等； __ __ 管理低级功能，比如生理本能等。
-2. 人要具有正常对待事物的能力，需要包括意、志、思、虑、智等五个不同的过程。其中对事物表象进行认识，在心中产生印象称为忆（意）；对事物表象认识的存储、积累称为 __ __ ；对事物进行反复分析、比较的过程称为 __ __ ；反复思考的基础上，由近而远地估计未来变化的思维过程称为 __ __ ；最终人形成了能够正常对待事物的能力，称为 __ __ ；
+1. 魂、魄管理人体的平衡，其中 __ 管理高级功能，比如思想等； __ 管理低级功能，比如生理本能等。
+2. 人要具有正常对待事物的能力，需要包括意、志、思、虑、智等五个不同的过程。其中对事物表象进行认识，在心中产生印象称为忆（意）；对事物表象认识的存储、积累称为 __ ；对事物进行反复分析、比较的过程称为 __ ；反复思考的基础上，由近而远地估计未来变化的思维过程称为 __ ；最终人形成了能够正常对待事物的能力，称为 __ ；
 3. 结合上节关于精的叙述，谈谈精与神在人维持自身阴阳平衡中的作用。
-
