--- a/ok/wk/wk13-0.6.0.0.0.md
+++ b/ok/wk/wk13-0.6.0.0.0.md
@@ -98,7 +98,7 @@
 
 治疗：采用切开挂线疗法。将主瘘管外括约肌深层以下的支管及空腔切开，处理内口。外括约肌深层以上的瘘管挂线，经多次紧线，瘘道被勒开，伤口愈合后出院。随访八年，无复发，肛门功能正常。
 
-按：本例用挂线加切开疗法治愈。本法简便、不留后遗症而疗效好是其优点。（节选自《肛门直肠病》）
+ **按** ：本例用挂线加切开疗法治愈。本法简便、不留后遗症而疗效好是其优点。（节选自《肛门直肠病》）
 
 〔简便验方〕
 
