update ok/hk/hk1gl01-0.13.0.0.0.md. 标题字体缩小 韧硬綺实 结实 增加到5〜〜10烙 删除一个〜 隔2〜〜3天

--- a/ok/hk/hk1gl01-0.13.0.0.0.md
+++ b/ok/hk/hk1gl01-0.13.0.0.0.md
@@ -1,4 +1,4 @@
-## 乳蛾（慢性扁桃体炎）
+## 乳蛾<small>（慢性扁桃体炎）</small>
 
 此病在临床上最为多见。在儿童的多为扁桃体异常肥大（无临床症状者，可以不必作为疾病来论治）。在成人则表现为炎性病灶。发病年龄，一般以7～14岁儿童为最多，次为青年，老年更少。发病率，两性差别不大。
 
@@ -16,7 +16,7 @@
 
 木蛾：扁桃体最肥大，突出于腭弓之外，甚至两侧扁桃体在正中线处可以相接触。色呈淡红，质地较柔软。本症主要在儿童，但大多数儿童时期的扁桃体肥大，是属生理性，以后可随年龄的迭增而逐渐退化（萎缩）。
 
-石蛾：扁桃体间质内有纤维组织增生，继以纤维组织的收缩，使它体积收缩，淋巴组织萎缩。以其不大而韧硬綺实，故喻之为石。
+石蛾：扁桃体间质内有纤维组织增生，继以纤维组织的收缩，使它体积收缩，淋巴组织萎缩。以其不大而韧硬结实，故喻之为石。
 
 落井乳蛾：主要病变潜伏于扁桃体隐窝深处，扁桃体虽然以病理性萎缩而很小，但其隐窝及淋巴滤泡有慢性炎症长期存在。如隐窝内有大量脱落上皮、细菌、淋巴细胞和白细胞集聚形成脓栓，或隐窝口被疤痕组织封闭，则就形成瘢痕化。
 
@@ -58,7 +58,7 @@
 
 方法：用特制的金属小烙铁，一般以紫铜或白银最好。在酒精灯上烧热，其温度是将热烙铁平放于一叠白报纸上面烧焦3〜5张者为标准。然后即按烙于肥大的扁桃体上。每次初烙，每侧可烙3〜5烙铁。以后根据扁桃体肥大程度、充血情况及烙后反应而增加烙数。
 
-一般每次每侧增加到5〜〜10烙。当扁桃体体积缩小超过一半后，就可以逐渐减少烙数。每次灼烙之后，扁桃体的烙灼面形成一片黑褐色的焦化坏死组织的焦痂。此痂皮可从第二天开始逐渐脱落，随后产生一层白膜。白膜初起时与组织紧贴，不易剥离。烙后第四天就可自行脱落。因此，每隔2〜〜3天受烙一次为最适宜。如白膜粘连仍紧，可再等待一天。如有暂时出现禁忌症者，则烙治间隔时间可延长。
+一般每次每侧增加到5〜10烙。当扁桃体体积缩小超过一半后，就可以逐渐减少烙数。每次灼烙之后，扁桃体的烙灼面形成一片黑褐色的焦化坏死组织的焦痂。此痂皮可从第二天开始逐渐脱落，随后产生一层白膜。白膜初起时与组织紧贴，不易剥离。烙后第四天就可自行脱落。因此，每隔2〜3天受烙一次为最适宜。如白膜粘连仍紧，可再等待一天。如有暂时出现禁忌症者，则烙治间隔时间可延长。
 
 下烙方法，初次施烙，应选择扁桃体最凸出的部位下烙。因烙数不多，范围不宜太大。以后每次随着烙数的增加而逐渐扩大其范围。每次都以第一次施烙的部位为中心，向周围扩展。但也必须纠正过去过分地强调它（指扁桃体）是造成各科疾病的唯一发病灶，以致盲目的为了“预防”而把无病的或无甚大碍的扁桃体也予以烙灼或摘除，这也是不必要的。
 
