--- a/ok/qs/qs01_04.md
+++ b/ok/qs/qs01_04.md
@@ -506,7 +506,7 @@
 
 数而如绞绳索，左右弹动不已为紧脉，数而时有歇止者为促脉，数脉独显于关部为动脉。
 
-数脉属阳主火热，治疗时可以用泻心火或泻命门之火的办法。数而有力为实热，治宜凉泻，数而无力为虚火上浮，冶宜温补。肺燥阴虚疾患在深秋季节最忌见到数细无力之脉。寸部脉数多见于咽喉肿痛、口舌生疮，甚者咳嗽吐血、肺中脓疡。关部脉数为胃火内盛、肝火上炎。尺部脉数为下焦火热燔灼，要用滋阴降火的方剂（方剂很多，以生地、知母、黄柏、丹皮等为主药）进行治疗。
+数脉属阳主火热，治疗时可以用泻心火或泻命门之火的办法。数而有力为实热，治宜凉泻，数而无力为虚火上浮，治宜温补。肺燥阴虚疾患在深秋季节最忌见到数细无力之脉。寸部脉数多见于咽喉肿痛、口舌生疮，甚者咳嗽吐血、肺中脓疡。关部脉数为胃火内盛、肝火上炎。尺部脉数为下焦火热燔灼，要用滋阴降火的方剂（方剂很多，以生地、知母、黄柏、丹皮等为主药）进行治疗。
 
 **【滑脉】**
 
