update ok/hk/hk1gl01-0.14.0.0.0.md. 标题字体缩小 侍少量稀薄  待 津败液腐则为嫌  痰

--- a/ok/hk/hk1gl01-0.14.0.0.0.md
+++ b/ok/hk/hk1gl01-0.14.0.0.0.md
@@ -1,4 +1,4 @@
-## 石蛾（扁桃体结石）
+## 石蛾<small>（扁桃体结石）</small>
 
 以西医理论来说，凡扁桃体隐窝或其他腺窝内有钙或镁的磷酸盐或石灰酸盐的积聚，则即成结石。《喉科泄秘》解释谓：“白而硬者，石蛾也”。的确，这种结石，是色白而坚硬。
 
@@ -6,7 +6,7 @@
 
 结石的存在，除具有慢性扁桃体炎各项症状之外，并无特殊症状。若并合感染，则将有疼痛、耳痛、吞咽困难等等。因有臭味的分泌物，故而口腔中长期产生怪味。
 
-检查所见，结石的存在，常为一个，但也有多个，从米粒到山核桃大。显有充血现象。或有流脓的小瘘管，侍少量稀薄脓液流出后，即可看到黄色或白色结石体。如用探针去探，则有硬物可触到，这就是结石。
+检查所见，结石的存在，常为一个，但也有多个，从米粒到山核桃大。显有充血现象。或有流脓的小瘘管，待少量稀薄脓液流出后，即可看到黄色或白色结石体。如用探针去探，则有硬物可触到，这就是结石。
 
 有时埋藏较深，故《喉科秘钥》谓：“此症生乳蛾地位，少进寸许”。
 
