--- a/ok/bc/bc00.1-0.2.5.0.0.md
+++ b/ok/bc/bc00.1-0.2.5.0.0.md
@@ -14,7 +14,7 @@
 
 五味入五脏，五脏之病又各有所禁，如走筋，筋病毋多食酸，筋得酸，则拘挛收引益甚也。苦走骨，骨病毋多食苦，骨得苦，则阴益甚重而难举也。因此不可偏食五味，多则令人病，如多食咸，則脉凝泣而变色，多食苦，则皮槁而毛拔等。即多食咸味，能使血脉流行凝涩不畅，并且血色改变，多食苦味，能使皮肤枯槁而毫毛脱落等。故五味不可过用、滥用。这些论述在临床实践中都有一定的指导意义。
 
-关于中药的名称，有它一定的意义和来历。有因产地而命名者，如贝母，产于四川的称川贝母，产于浙江象山的称象贝母。有因功能而命名者，如防风，善疏风散邪，益母草多冶妇人诸疾，决明子能明目除障等等。有因特殊气味而命名者，如香薷之香，豨签草之恶。有以味而命名者，如甘草之甘，苦参之苦等。有因形态而命名者，如人参，其根如人形；狗脊形如狗的脊骨等。．有因生长特性而命名者，如夏枯草夏至后花叶枯萎，款冬花因至冬而花也。有因颜色而命名者，如黄连其根连珠而色黄，玄参因状如参而色黑。有以药物的性质和药用部位而命名者，如石膏、石脂．当归尾、当归身等。此外，有因故事传说或以发现者的名字命名的，如何首乌、刘寄奴，使君子等等。总之，药物的命名有多种多样，且有一定涵义，这里不过举几个例子。
+关于中药的名称，有它一定的意义和来历。有因产地而命名者，如贝母，产于四川的称川贝母，产于浙江象山的称象贝母。有因功能而命名者，如防风，善疏风散邪，益母草多治妇人诸疾，决明子能明目除障等等。有因特殊气味而命名者，如香薷之香，豨签草之恶。有以味而命名者，如甘草之甘，苦参之苦等。有因形态而命名者，如人参，其根如人形；狗脊形如狗的脊骨等。．有因生长特性而命名者，如夏枯草夏至后花叶枯萎，款冬花因至冬而花也。有因颜色而命名者，如黄连其根连珠而色黄，玄参因状如参而色黑。有以药物的性质和药用部位而命名者，如石膏、石脂．当归尾、当归身等。此外，有因故事传说或以发现者的名字命名的，如何首乌、刘寄奴，使君子等等。总之，药物的命名有多种多样，且有一定涵义，这里不过举几个例子。
 
 至<备要>所云：药之为用，或地道不真，则美恶迴别，或市肆饰伪，则气味全或乖。是说明药物的品种、产地、采收、贮存、加工炮制等因素对药材质量有很大影响，临床应用时，如不究其源，不知其别，势必影响治疗效果。
 
