--- a/ok/fjx/fjx03-0.2.0.0.0.md
+++ b/ok/fjx/fjx03-0.2.0.0.0.md
@@ -16,7 +16,7 @@
 
 大、小陷胸汤均可治疗结胸证，但其病因、病位、病证尚有别，故临证必须明辨，区别运用。主治大结胸证（即结胸之重证），病因为水热互结于胸胁少腹，其病位从心下至少腹硬满痛，拒按，大便秘结，脉沉弦紧，舌苔黄腻，其病位范围较大。而小陷胸汤，主治小结胸证（即结胸之轻证)，病因为痰热互结于胸脘，病位正在心下，邪结偏上，其病位范围小，证情较轻，胸脘部痞满，按之则痛，苔黄白而腻，脉浮弦滑。
 
-本方与大承气汤比较，均具有峻下热结的作用，皆有便秘、潮热等症。然而，大陷胸汤，病位在中上二焦，症状以心下至少腹硬满而痛不可近为主，病性为水热互结之实热证。大承气汤，病位在中下二焦，症状可见脘腹胀满疼痛拒按为主，病性为实热与积滞内结于肠胃，气机阻滞。大陷胸汤作用在于泻热逐水，故用甘遂与大黄相伍，而且大黄要先煎而后纳诸药，取其“冶上者宜缓”之义。而大承气汤的作用，攻逐肠胃之燥实，故用大黄、芒硝与枳实、厚朴配伍，意在峻下热结，急下存阴，先煎枳朴，而后纳大黄，取其“治下者制宜急”之意。
+本方与大承气汤比较，均具有峻下热结的作用，皆有便秘、潮热等症。然而，大陷胸汤，病位在中上二焦，症状以心下至少腹硬满而痛不可近为主，病性为水热互结之实热证。大承气汤，病位在中下二焦，症状可见脘腹胀满疼痛拒按为主，病性为实热与积滞内结于肠胃，气机阻滞。大陷胸汤作用在于泻热逐水，故用甘遂与大黄相伍，而且大黄要先煎而后纳诸药，取其“治上者宜缓”之义。而大承气汤的作用，攻逐肠胃之燥实，故用大黄、芒硝与枳实、厚朴配伍，意在峻下热结，急下存阴，先煎枳朴，而后纳大黄，取其“治下者制宜急”之意。
 
 大陷胸汤对于急性水肿性胰腺炎、急性肠梗阻，都有较好的疗效。
 
