--- a/ok/yk/yk1gl06-0.7.0.0.0.md
+++ b/ok/yk/yk1gl06-0.7.0.0.0.md
@@ -68,7 +68,7 @@
 
 （四）临证权变
 
-前属证治，仅是大略言之，临床实际要复杂得多。如经期目病，亦有肝郁气滞引起者，须用逍遥散疏肝理气；眼病若还兼吐血、衄血，又可与经行吐衄相参论治。妊娠目病胎火为患者虽多，但若兼见面色萎黄，头晕目眩，心悸怔忡等，则不为胎火而属血虚，可用胎元饮<sup>〔165〕</sup>补脾益血；产后目病更为复杂，当须详辨：初产恶露不尽时患目病，即使为虚证，亦不可纯用滋补之品，须合用生化汤<sup>〔69〕</sup>随证加减。产后感受外邪而患目病，又当将熟地黄汤<sup>〔253〕</sup>与加味调中益气汤<sup>〔80〕</sup>合用以补气血，疏风邪。另外，经、胎、产后诸期目病的冶法方药，亦可通用，只要方药符合眼病的病理机制即可。
+前属证治，仅是大略言之，临床实际要复杂得多。如经期目病，亦有肝郁气滞引起者，须用逍遥散疏肝理气；眼病若还兼吐血、衄血，又可与经行吐衄相参论治。妊娠目病胎火为患者虽多，但若兼见面色萎黄，头晕目眩，心悸怔忡等，则不为胎火而属血虚，可用胎元饮<sup>〔165〕</sup>补脾益血；产后目病更为复杂，当须详辨：初产恶露不尽时患目病，即使为虚证，亦不可纯用滋补之品，须合用生化汤<sup>〔69〕</sup>随证加减。产后感受外邪而患目病，又当将熟地黄汤<sup>〔253〕</sup>与加味调中益气汤<sup>〔80〕</sup>合用以补气血，疏风邪。另外，经、胎、产后诸期目病的治法方药，亦可通用，只要方药符合眼病的病理机制即可。
 
 〔调护〕
 
