--- a/ok/bc/bc12-0.0.8.0.0.md
+++ b/ok/bc/bc12-0.0.8.0.0.md
@@ -4,7 +4,7 @@
 
 【原文】 **辛微苦寒**，**入手足厥阴**。<small>心包、肝。</small>**消水行血**，**去瘀生新，调经解毒**。<small>淤血去则经调。</small> **治血风血运**，**血痛血淋**，**胎痛难产**,**崩中带下**，<small>带脉横于腰间，病生于此，故名为带。赤属血，白属气。气虚者，补中益气而兼开降；血虚者，养血滋阴而兼调气。</small>**为经产良药**。**消疔肿乳痈**，<small>亦取其散瘀解毒。</small>**通大小便。然辛散之药，瞳子大者忌服**。
 
-**益母子,主治略同。调经益精,明目**。<small>血滞病目者则宜之。</small>**活血，顺气逐风**。<small>气行则血行，血活则风散。</small>**行中有补，治心烦头痛**,<small>血虚血热之候。</small>**胎产带崩,令人有子**。<small>有补阴之功。李时珍曰：益母根、茎、花、叶、实，皆可同用。若冶疮肿胎产 ，消水行血，则宜并用;若治血分风热，明目调经，用子为良。盖根、茎、花、叶专于行，子则行中有补也。《产宝》 济阴返魂丹，小暑端午，或六月六日，采益母茎叶花实，为末蜜丸，治胎产百病。近效方，捣汁熬膏亦良。</small>**忌铁。子微炒用**。
+**益母子,主治略同。调经益精,明目**。<small>血滞病目者则宜之。</small>**活血，顺气逐风**。<small>气行则血行，血活则风散。</small>**行中有补，治心烦头痛**,<small>血虚血热之候。</small>**胎产带崩,令人有子**。<small>有补阴之功。李时珍曰：益母根、茎、花、叶、实，皆可同用。若治疮肿胎产 ，消水行血，则宜并用;若治血分风热，明目调经，用子为良。盖根、茎、花、叶专于行，子则行中有补也。《产宝》 济阴返魂丹，小暑端午，或六月六日，采益母茎叶花实，为末蜜丸，治胎产百病。近效方，捣汁熬膏亦良。</small>**忌铁。子微炒用**。
 
 【讲解】 **益母草善能活血通经，为妇科经产要药**。为唇形科--年生或二年生草本植物益母草的全草。《本经》又名茺蔚。生用或熬膏用。
 
