--- a/ok/fjx/fjx16-0.8.0.0.0.md
+++ b/ok/fjx/fjx16-0.8.0.0.0.md
@@ -14,7 +14,7 @@
 
 本方所谓“中风”，虽可隶属于内风病范畴，但纯属极虚之证，而绝对不是肝阳亢极导致的中风（脑溢血），更不是具有之经形证的真中风。
 
-〔临证应用〕本方为冶喑痱之主方。如足废偏于肾阴虚而见骨节烦热者，可加桑枝、地骨皮、鳖甲以退虚热。
+〔临证应用〕本方为治喑痱之主方。如足废偏于肾阴虚而见骨节烦热者，可加桑枝、地骨皮、鳖甲以退虚热。
 
 若偏于肾阳虚而见腰膝冷感者，可加淫羊藿、仙茅以温化肾阳。
 
