--- a/ok/bc/bc17-0.3.5.0.0.md
+++ b/ok/bc/bc17-0.3.5.0.0.md
@@ -6,6 +6,6 @@
 
 本品甘平质粘，归肺、肝、肾经。入肝以补血，入肺肾以滋阴，故有补肝血、滋肾阴、润肺燥之功，而为补血养阴良药。借其滋补粘腻之性，善能凝固血络，而有显著的止血之效。故凡血虚阴亏，虚烦失眠及一切失血之证，皆视为要药，对虚劳咳血，或阴虚燥咳尤为合适。但性质粘腻，有碍消化，故脾胃虚弱，不思饮食，以及呕吐泄泻者均应忌用。
 
-【临证应用】阿胶有良好的补血作用，用于血虚眩晕、心悸等证，可与党参、当归、白芍等补气养血药同用。用于吐血、咯血，常与白芨、麦冬、生地等配伍；治妇女崩漏、月经过多、妊娠下血或小产后下血不止等，又常与艾叶炭、生地、白芍等同用，如胶艾汤，以止血安胎；若大便下血属虚寒者，又可配附子、灶心土、地黄等同用，如黄土汤。治阴虚心悸、失眠等证，可与黄连、白芍、鸡子黄等同用，如黄连阿胶汤，为冶热病伤阴，心烦失眠的有效方剂。本品既能滋肺阴，又善润肺燥，并能止血，可用于肺虚火盛，喘咳痰少或痰中带血之证，常与杏仁、马兜铃、牛蒡子等同用，如补肺阿胶汤；若燥热伤肺，干咳无痰、鼻燥咽干者，可与生石膏、杏仁、桑叶、麦冬等同用，如清燥救肺汤。
+【临证应用】阿胶有良好的补血作用，用于血虚眩晕、心悸等证，可与党参、当归、白芍等补气养血药同用。用于吐血、咯血，常与白芨、麦冬、生地等配伍；治妇女崩漏、月经过多、妊娠下血或小产后下血不止等，又常与艾叶炭、生地、白芍等同用，如胶艾汤，以止血安胎；若大便下血属虚寒者，又可配附子、灶心土、地黄等同用，如黄土汤。治阴虚心悸、失眠等证，可与黄连、白芍、鸡子黄等同用，如黄连阿胶汤，为治热病伤阴，心烦失眠的有效方剂。本品既能滋肺阴，又善润肺燥，并能止血，可用于肺虚火盛，喘咳痰少或痰中带血之证，常与杏仁、马兜铃、牛蒡子等同用，如补肺阿胶汤；若燥热伤肺，干咳无痰、鼻燥咽干者，可与生石膏、杏仁、桑叶、麦冬等同用，如清燥救肺汤。
 
 【用量用法】5—15克，入汤剂用开水或黄酒烊化冲服。止血宜蒲黄炒，以增强止血作用；润肺宜蛤粉炒，以加强清润之功。
