--- a/ok/bc/bc00.1-0.2.4.0.0.md
+++ b/ok/bc/bc00.1-0.2.4.0.0.md
@@ -1,6 +1,6 @@
 ### 四、炮制：
 
-炮制即中药在应用前或制成各种剂型前的加工过程，包括对药材的一般修治整理和较复杂的特殊处理。由于中药材大多是生药，经过特定的炮制处理后才能符合冶疗需要，充分发挥药效。因此照不同的药性和治疗要求，而有多样的炮制方法。炮制的作用，大致可归纳以下四方面：（1）消除或降低药物的毒性或副作用。（2）改变药物性能，以适应病情需要，或增强药物疗效。（3）除去杂质和非药用部分，使药物清洁纯净。（4）使于制剂和贮藏。
+炮制即中药在应用前或制成各种剂型前的加工过程，包括对药材的一般修治整理和较复杂的特殊处理。由于中药材大多是生药，经过特定的炮制处理后才能符合治疗需要，充分发挥药效。因此照不同的药性和治疗要求，而有多样的炮制方法。炮制的作用，大致可归纳以下四方面：（1）消除或降低药物的毒性或副作用。（2）改变药物性能，以适应病情需要，或增强药物疗效。（3）除去杂质和非药用部分，使药物清洁纯净。（4）使于制剂和贮藏。
 
 炮制的方法：除一般的挑、簸、刷等纯净处理，捣、碾等粉碎处理，切、铡等切制处理外，主要是水、火、水火共制三种炮制方法。
 
