--- a/ok/fjx/fjx17-0.1.0.0.0.md
+++ b/ok/fjx/fjx17-0.1.0.0.0.md
@@ -6,11 +6,11 @@
 
 〔讲解〕本方是治外科疮疡肿毒阳证的一首常用方剂。所谓外科疮疡肿毒阳证是指疮疡肿毒初起，具有红、肿、热、痛诸证的。该方临床应用广泛，故人称“疡科第一方”，因疗效确实，能定痛消痈，功似仙方，有起死回生之效，故名“仙方活命饮”。
 
-方中重用金银花为君，甘寒轻清，清热解毒，芳香透达，消痈散结，为疮家圣药。防风、白芷辛温散邪，使热毒外透，以防寒凉太过，恐遏伏邪气。寓有“火郁发之”之意。陈皮、赤芍、当归尾、乳香、没药行气通络，活血化瘀，消肿止痛为臣．使气行血行，有去瘀生新之效，而利于热毒解散。佐贝母、花粉清热降火、化痰散结。以穿山甲、皂角刺通行经络，透脓溃坚，引药直达病所为使。甘草清热解毒而和中，用节是取节以散结，用酒煎服，是借酒温经通络助药力直达病所。如不会饮酒的人，可以酒水各半煎，或河水煎服。诸药合用，共达清热解毒，消肿溃坚，活血止痛之功效。
+方中重用金银花为君，甘寒轻清，清热解毒，芳香透达，消痈散结，为疮家圣药。防风、白芷辛温散邪，使热毒外透，以防寒凉太过，恐遏伏邪气。寓有“火郁发之”之意。陈皮、赤芍、当归尾、乳香、没药行气通络，活血化瘀，消肿止痛为臣，使气行血行，有去瘀生新之效，而利于热毒解散。佐贝母、花粉清热降火、化痰散结。以穿山甲、皂角刺通行经络，透脓溃坚，引药直达病所为使。甘草清热解毒而和中，用节是取节以散结，用酒煎服，是借酒温经通络助药力直达病所。如不会饮酒的人，可以酒水各半煎，或河水煎服。诸药合用，共达清热解毒，消肿溃坚，活血止痛之功效。
 
 该方的常用加减法为：如热毒炽盛可选用连翘、蒲公英、地丁草、野菊花、黄连、板蓝根等一、二味，以增强清热解毒之力。橘皮可少用，以防辛燥伤阴。疮疡范围不大不深者去山甲、皂刺，以防伤正。疼痛不太严重的少用乳香、没药。血热重再加丹皮凉血散瘀。大热大渴津伤的重用花粉并加生地、玄参、石斛以清热生津消肿。便秘的加大黄，以泻热通便，使毒热下泄。小便短赤加车前子以清热利湿。气虚的可重加黄芪以补气托里、排脓生肌。
 
-根据疮毒所在的不同部位，可加引经药，如病在头部加白蒺藜；颈项加桔梗；胸部加瓜委；胁部加柴胡；腰背加秦艽；上肢加片姜黄；下肢加牛膝。
+根据疮毒所在的不同部位，可加引经药，如病在头部加白蒺藜；颈项加桔梗；胸部加瓜蒌；胁部加柴胡；腰背加秦艽；上肢加片姜黄；下肢加牛膝。
 
 〔临证应用〕凡痈疮肿毒，属于阳证而身体壮实的全可应用本方，而总以患处红肿焮痛，苔白或微黄，脉滑数有力为辨证使用要点。本方治法属中医外科中“消法”。脓成的服之可消，脓已成的服之可溃。本方除内服外，药渣也可捣烂外敷。
 
